Save/Update files [ci skip]

--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -137,7 +137,7 @@
  abandoned_mlc:0 "放棄されたマラッカ"
  emerald_buddha:0 "エメラルド仏"
  desc_emerald_buddha:0 "この神器はこの州の寺院にて保管されています。敵はこれを非常に重要なものとみなしているので、うまく保持しましょう。"
- emerald_buddha_tt:1 "§Yエメラルド仏§!は§Y[Root.GetName]§!から削除されます。"
+ emerald_buddha_tt:2 "§Yエメラルド仏§!は§Y[emerald_buddha_province.GetName]§!から削除されます。"
  emerald_buddha_alternate:0 "エメラルド仏"
  desc_emerald_buddha_alternate:0 "この神器はこの州の寺院にて保管されています。敵はこれを非常に重要なものとみなしているので、うまく保持しましょう。"
  renovate_emerald_buddha_shrine_title:0 "エメラルド仏を改修する（§Yカルマ＋§!）"
@@ -526,7 +526,7 @@
  lig_autonomous_subject:0 "自律的な属国"
  lig_autonomous_subject_desc:0 "自国はムアン、つまり都市国家としての自由を勝ち取り、もはやシャム王国の統治下にはない。自分たちの国家になったことで、他の東南アジア諸国の注目を集めてきた。それが本来のあるべき姿だ。"
  lig_religious_conversion:0 "仏教の改宗"
- lig_religious_conversion_desc:0 "伝統は自国を強くするものでる。リゴールは、ヌサンタラを乗っ取りつつあるイスラムのスルタン国家に対する最後の砦として頭角を表すべきだ。お釈迦様の思慮深き教えを世界の他の国々と分かち合うことが我が義務である。"
+ lig_religious_conversion_desc:1 "伝統は自国を強くするものでる。リゴールは、ヌサンタラを乗っ取りつつあるイスラムのスルタン国家に対する最後の砦として頭角を表すべきだ。お釈迦様の思慮深き教えを世界の他の国々と分かち合うことが我が義務である。"
  lig_vassal_cities:0 "従属都市"
  lig_vassal_cities_desc:0 "ムアンとして、リゴールでは独自の王朝を保持し、自身の属国を所有できる。勢力を拡大したければ、手始めにマレー半島にある他のムアンを探し併合するのがよさそうだ。"
  lig_trade_primacy:0 "卓越した交易"
