--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -3,7 +3,7 @@
  NEW_ACHIEVEMENT_1_2_DESC:0 "外交併合をする。"
  NEW_ACHIEVEMENT_1_3_NAME:0 "これぞ大陸軍"
  NEW_ACHIEVEMENT_1_3_DESC:0 "陸軍扶養限界の上限まで保有する。"
- NEW_ACHIEVEMENT_1_4_NAME:0 "大海軍"
+ NEW_ACHIEVEMENT_1_4_NAME:0 "これぞ大海軍"
  NEW_ACHIEVEMENT_1_4_DESC:0 "海軍扶養限界の上限まで保有する。"
  NEW_ACHIEVEMENT_1_5_NAME:0 "信仰の擁護者"
  NEW_ACHIEVEMENT_1_5_DESC:0 "信仰の擁護者になる。"
@@ -71,7 +71,7 @@
  NEW_ACHIEVEMENT_6_4_DESC:0 "ポーランドとして、全技術を最大レベルの32まで到達させる。"
  NEW_ACHIEVEMENT_6_5_NAME:0 "世界の発見者"
  NEW_ACHIEVEMENT_6_5_DESC:0 "荒れ地以外の全ての州を見つける。"
- NEW_ACHIEVEMENT_6_6_NAME:0 "皇位"
+ NEW_ACHIEVEMENT_6_6_NAME:0 "高御座"
  NEW_ACHIEVEMENT_6_6_DESC:0 "大名として日本を統一する。"
  NEW_ACHIEVEMENT_6_7_NAME:0 "バシレウス"
  NEW_ACHIEVEMENT_6_7_DESC:0 "ビザンツとして、ローマ帝国を再建する。"
@@ -213,7 +213,7 @@
  NEW_ACHIEVEMENT_8_13_NAME:0 "ラージプート・ライヒのラージャ"
  NEW_ACHIEVEMENT_8_13_DESC:0 "ナーガウルでドイツ全土を征服する。"
  NEW_ACHIEVEMENT_8_14_NAME:0 "日の沈まないインド帝国"
- NEW_ACHIEVEMENT_8_14_DESC:1 "ヒンドゥスターンかバーラトを建国し、ケープ、ロンドン、香港（広州）、オタワ（アレンダロノン）を自国か従属国が領有する。"
+ NEW_ACHIEVEMENT_8_14_DESC:2 "ヒンドゥスターンかバーラトを建国し、ケープ、ロンドン、香港（広州）、オタワ（キチェシピリニ）を自国か従属国が領有する。"
  NEW_ACHIEVEMENT_8_15_NAME:0 "1000以上だ！"
  NEW_ACHIEVEMENT_8_15_DESC:0 "1001以上の州を直接領有する。"
  NEW_ACHIEVEMENT_8_16_NAME:0 "ドラキュラの復讐"
@@ -316,7 +316,7 @@
  NEW_ACHIEVEMENT_10_1_NAME:0 "タタールスタン"
  NEW_ACHIEVEMENT_10_1_DESC:0 "カザンかノガイでタタール文化集団の土地を全て所有する。"
  NEW_ACHIEVEMENT_10_2_NAME:0 "テッラ・マリアナ"
- NEW_ACHIEVEMENT_10_2_DESC:0 "リガとして、バルト海地方を中核州として領有する。"
+ NEW_ACHIEVEMENT_10_2_DESC:1 "リガとして、バルト海地方を中核州として自国か従属国が領有する。"
  NEW_ACHIEVEMENT_10_3_NAME:0 "天空神への血を！"
  NEW_ACHIEVEMENT_10_3_DESC:0 "テングリ国家として、ナワトルを融合信仰とする。"
  NEW_ACHIEVEMENT_10_4_NAME:0 "屍の山"
@@ -667,3 +667,25 @@
  NEW_ACHIEVEMENT_84_DESC:1 "スーとして、諜報員が発覚して敵対している（評価が0未満）国を3か国持つ。"
  NEW_ACHIEVEMENT_85_NAME:0 "Atwixの遺産"
  NEW_ACHIEVEMENT_85_DESC:0 "同時に10個の同君連合を組む。"
+ NEW_ACHIEVEMENT_86_NAME:0 "Brick by Brick"
+ NEW_ACHIEVEMENT_86_DESC:1 "Starting as Denmark, enact the Unified Kalmar Monarchy government reform and own the entire Scandinavian region as your cores."
+ NEW_ACHIEVEMENT_87_NAME:0 "Super Trooper"
+ NEW_ACHIEVEMENT_87_DESC:1 "Starting as Sweden, enact the Allotment System government reform, have 80 regiments of Carolean raised at the same time with at least +40% infantry combat ability."
+ NEW_ACHIEVEMENT_88_NAME:1 "Assembly Instructions Needed"
+ NEW_ACHIEVEMENT_88_DESC:0 "Form Scandinavia and revoke the privilegia of the Holy Roman Empire while being the Emperor."
+ NEW_ACHIEVEMENT_89_NAME:0 "Let It Go!"
+ NEW_ACHIEVEMENT_89_DESC:2 "Starting as Norway, have your capital in the Canada region while not owning any province in Scandinavia and not playing as a released subject."
+ NEW_ACHIEVEMENT_90_NAME:0 "Holy Horder"
+ NEW_ACHIEVEMENT_90_DESC:0 "Starting as the Teutonic Order, form the Mongol Empire while have the Holy Horde government reform enacted."
+ NEW_ACHIEVEMENT_91_NAME:0 "For the Emperor!"
+ NEW_ACHIEVEMENT_91_DESC:0 "Form Prussia or Germany, have the Empire government rank and 40.000 Marines raised at the same time."
+ NEW_ACHIEVEMENT_92_NAME:0 "The Freest Man in the World"
+ NEW_ACHIEVEMENT_92_DESC:0 "Ensure that no colonized province in the world produces slaves while having the War Against the World Doctrine government reform enacted."
+ NEW_ACHIEVEMENT_93_NAME:0 "Crossing the Finnish Line"
+ NEW_ACHIEVEMENT_93_DESC:1 "Release and play as Finland in 1444 and have a direct land connection to the Cape while your capital is in Nyland/Uusimaa."
+ NEW_ACHIEVEMENT_94_NAME:0 "Purify the Temple"
+ NEW_ACHIEVEMENT_94_DESC:1 "Starting as Riga, enact the Salvific Plutocracy government reform and raid the heretic church of Rome."
+ NEW_ACHIEVEMENT_95_NAME:0 "ほぼプルシアンブルー"
+ NEW_ACHIEVEMENT_95_DESC:0 "リヴォニア騎士団として、リヴォニアを建国し北ドイツ連邦のテリトリーを中核州として領有する。"
+ NEW_ACHIEVEMENT_96_NAME:0 "Hanukkah Mutapa"
+ NEW_ACHIEVEMENT_96_DESC:0 "Starting as Mutapa, convert to Judaism and celebrate a festival."
