--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -321,7 +321,7 @@
  devotion_events.119.b:0 "熱心に否定する。"
  dev_confiscated_reformed_church:0 "改革派の教会が没収された。"
  desc_dev_confiscated_reformed_church:0 "大修道院長による改革派教会の没収は、それが返還されたにもかかわらず、農民と市民を大きく怒らせた。"
- devotion_events.200.t:0 "地元のイマームカティブ"
+ devotion_events.200.t:0 "地元のイマーム・ハティーブ"
  devotion_events.200.d:0 "[Root.Heir.GetName]は、[Root.Heir.GetSheHe]が[Root.Monarch.GetTitle][Root.Monarch.GetName]の後に[Root.Country.GetName]の支配者として選ばれるまでは、マスジッドにおける祈りの指導者であり、金曜日の会衆の祈りの説教者であった。イマーム・カディブとして[Root.Heir.GetHerHim]を選んだ地元の社会は、イスラムの基礎を会衆に教えるのに[Root.Heir.GetHerHim]と同様に博識で、高潔な者はほとんどいないため、[Root.Heir.GetName]が去ったのを悲しんでいるだろう。[Root.Heir.GetSheHe]が去ったことで、[Root.Heir.GetName]よりも劣っている人に宗教的な質問をする必要があるが、それらを失うことで、我々が得るものもあるだろう。"
  devotion_events.200.a:0 "[Root.Heir.GetName]を次の[Root.Monarch.GetTitle]として選択することが賢明だった。"
  devotion_events.201.t:0 "基本理念"
@@ -705,29 +705,29 @@
  custodian_of_the_two_holy_mosques:0 "二聖都の守護者"
  desc_custodian_of_the_two_holy_mosques:0 "我々はメッカとメディナの都市を支配し、イスラム世界で最も神聖な聖廟を管理している。"
  organised_through_bishops_aspect:0 "司教を通じた組織化"
- desc_organised_through_bishops_aspect:0 "司教は、以前は都市部に限られた単一の教会の指導者であった。今日では、より広い地域の教会を率い、もはや個々の集会に奉仕することはない。司祭は、各教会を奉仕するために任命され、司教の代理人として行動する。"
+ desc_organised_through_bishops_aspect:1 "司教は、以前は都市部に限られた単一の教会の指導者であった。今日では、より広い地域の教会を率い、もはや個々の集会に奉仕することはない。司祭は、各教会へと奉仕するために任命され、司教の代理人として行動する。\n\n§Y10§!年間、建設コストが§G-10%§!低下する"
  priests_may_marry_aspect:0 "司祭は結婚できる"
- desc_priests_may_marry_aspect:0 "皇帝ユスティニアヌス1世は、聖職にある聖職者が結んだあらゆる結婚は無効であると宣言し、そのような結婚で生まれた子供たちを違法と宣言した。司祭はいつも、多かれ少なかれ不法に妻と暮らしているが、独身であることが要求されている。司祭たちが結婚できるようにすることによって、我々は聖職者の結婚に承認の印を与え、聖書の根拠に基づいて独身の掟を非難した。"
+ desc_priests_may_marry_aspect:1 "皇帝ユスティニアヌス1世は、聖職にある聖職者が結んだあらゆる結婚は無効であると宣言し、そのような結婚で生まれた子供たちを違法と宣言した。司祭はいつも、多かれ少なかれ不法に妻と暮らしているが、独身であることが要求されている。司祭たちが結婚できるようにすることによって、我々は聖職者の結婚に承認の印を与え、聖書の根拠に基づいて独身の掟を非難した。\n\n§Y10§!年間、真の宗教の寛容度が§G+1§!される"
  adult_baptism_aspect:0 "成人のバプテスマ"
- desc_adult_baptism_aspect:0 "イエス・キリストを信仰する告白に基づいて成人としてバプテスマを受け、恵みと教会員を救うことが神からの贈り物だと信じる人々によって、地元の信仰社会への入会が行われる。受取人の信仰は声で発せられなければならず、一人の人間から別の人に分け与えたり移されたりすることはできない。"
+ desc_adult_baptism_aspect:1 "イエス・キリストを信仰する告白に基づいて成人としてバプテスマを受け、恵みと教会員を救うことが神からの贈り物だと信じる人々によって、地元の信仰社会への入会が行われる。受取人の信仰は声で発せられなければならず、一人の人間から別の人に分け与えたり移されたりすることはできない。\n\n§Y10§!年間、真の信仰州の人的資源§G+10%§!"
  holy_sacraments_aspect:0 "聖なる秘跡"
- desc_holy_sacraments_aspect:0 "7つの秘跡は、キリストによって確立され、教会に委ねられた恵みの有効な兆候であり、神の命が我々に分配される儀式である。これらの聖なる秘跡は、洗礼、堅信または傅膏機密、聖餐、告解、病者の塗油、叙階、結婚である。"
+ desc_holy_sacraments_aspect:1 "7つの秘跡は、キリストによって確立され、教会に委ねられた恵みの有効な兆候であり、神の命が我々に分配される儀式である。これらの聖なる秘跡は、洗礼、堅信または傅膏機密、聖餐、告解、病者の塗油、叙階、結婚である。\n\n§Y10§!年間、士気ダメージが§G+5%§!される"
  saints_accept_prayers_aspect:0 "聖人は祈りを受け入れる"
- desc_saints_accept_prayers_aspect:0 "罪を犯した信者のために神への仲介や祈りを求められる聖人達の神への執り成しは我々の教会に支持される教義です。"
+ desc_saints_accept_prayers_aspect:1 "罪を犯した信者のために神への仲介や祈りを求められる聖人達の神への執り成しは我々の教会に支持される教義です。\n\n§Y10§!年間、戦闘からの陸軍伝統§G+100%§!"
  icons_images_aspect:0 "聖像"
- desc_icons_images_aspect:0 "イエス、マリア、聖人、天使を描写した絵は、石で刻まれ、布に刺繍され、木に塗られたり、さまざまな方法で作られて、多くの場合飾られている。これらの聖像については議論され反対されてきたが、人気のある聖像のために彼らの存在が保証され、教会はついに聖像の崇拝を許可することを甘受した。"
+ desc_icons_images_aspect:1 "イエス、マリア、聖人、天使を描写した絵は、石で刻まれ、布に刺繍され、木に塗られたり、さまざまな方法で作られて、多くの場合飾られている。これらの聖像については議論され反対されてきたが、人気のある聖像のために彼らの存在が保証され、教会はついに聖像の崇拝を許可することを甘受した。\n\n§Y10§!年間、統治者の文化を持つ顧問の費用§G-10%§!"
  legalised_divorces_aspect:0 "合法的な離婚"
- desc_legalised_divorces_aspect:0 "婚姻が世俗的契約とみなされるようになるまでは、教会権威が婚姻の無効を決定していた。世俗権威は\"divortium a vinculo matrimonii\"即ち「結婚による全ての結びつきからの分離」の布告ができ、それによって婚姻を解消した。"
+ desc_legalised_divorces_aspect:1 "婚姻が世俗的契約とみなされるようになるまでは、教会権威が婚姻の無効を決定していた。世俗権威は\"divortium a vinculo matrimonii\"即ち「結婚による全ての結びつきからの分離」の布告ができ、それによって婚姻を解消した。\n\n§Y10§!年間、政府改革進捗度の増加§G+10%§!"
  heretics_deported_aspect:0 "異端者の追放"
- desc_heretics_deported_aspect:0 "異端者たちが、異端であると信じられている信念や意見により、我々の教会に反対する人々への処刑は、この罪の有罪判決を受けた人の追放に置き換えられている。"
+ desc_heretics_deported_aspect:1 "異端者たちが、異端であると信じられている信念や意見により、我々の教会に反対する人々への処刑は、この罪の有罪判決を受けた人の追放に置き換えられている。\n\n§Y10§!年間、入植可能性§G+10%§!"
  parish_registers_aspect:0 "教区の登録"
- desc_parish_registers_aspect:0 "洗礼、結婚、埋葬の詳細は今から教区登録簿に記録される。各教区の司祭は、これらの行事に参加し、2つの鍵による確実な貴重品箱に本を保管する。"
+ desc_parish_registers_aspect:1 "洗礼、結婚、埋葬の詳細は今から教区登録簿に記録される。各教区の司祭は、これらの行事に参加し、2つの鍵による確実な貴重品箱に本を保管する。\n\n§Y10§!年間、年間汚職§G-0.10%§!"
  individual_creeds_aspect:0 "個人の信条"
- desc_individual_creeds_aspect:0 "人々が自分の意見や宗教についての信念を形成することを可能にする、自由な思考によるより高い寛容性を持ち、それを受け入れることは、技術の向上へとつながる。"
+ desc_individual_creeds_aspect:1 "人々が自分の意見や宗教についての信念を形成することを可能にする、自由な思考によるより高い寛容性を持ち、それを受け入れることは、技術の向上へとつながる。\n\n§Y10§!年間、有効な顧問§G+2§!"
  allow_usury_aspect:0 "高利貸しの許可"
- desc_allow_usury_aspect:0 "貸し手を豊かにする利息を課した金銭的な融資は今や認められており、もはや罪深いものとはみなされない。"
+ desc_allow_usury_aspect:1 "貸し手を豊かにする利息を課した金銭的な融資は今や認められており、もはや罪深いものとはみなされない。\n\n§Y10§!年間、金利§G-0.5%§!"
  translated_bibles_aspect:0 "翻訳された聖書"
- desc_translated_bibles_aspect:0 "聖書を他の言語に翻訳することで、精神と心に話しかける言葉で神を知るための最良の資産が人々に与えられる。"
+ desc_translated_bibles_aspect:1 "聖書を他の言語に翻訳することで、精神と心に話しかける言葉で神を知るための最良の資産が人々に与えられる。\n\n§Y10§!年間、真の信仰州の制度普及§G+25%§!"
  GOVERNMENT_RANK:0 "政体と政府ランク"
  GOV_RANK:0 "政府ランク"
  gov_rank_1:0 "政府ランク"
@@ -1686,3 +1686,39 @@
  desc_fc_mercenary_contracts:0 "この国では、傭兵とのより安価な契約によって国防に注力している。"
  MOVE_CANT_RETREAT_FROM_COMBAT:0 "戦闘中のため、$VAL|Y$日はここを離れることは出来ない！"
  LOGIN_PDX_PENDING:0 "現在、あなたはログインしていません。ログイン処理中です。しばらくお待ちください…"
+ justified_religious_war_aspect:0 "正当化された紛争"
+ desc_justified_religious_war_aspect:1 "The new Church of the country is threatened by heathens and heretics alike. In a war of self-preservation, the Church will justify our conflicts with the Bible. \n\n We will also gain §G-10%§! Warscore Cost vs Other Religions for §Y10§! years"
+ war_preaches_aspect:1 "War Sermons"
+ desc_war_preaches_aspect:1 "In times of conflicts the faith preserves the hope of our people. The Church of our realm will preach from the holy book to keep the morale of the population even during the darkest hours up. \n\n We will also gain §G-100%§! War Taxes Cost for §Y10§! years"
+ head_of_the_church_aspect:0 "Head of Faith"
+ desc_head_of_the_church_aspect:1 "The Church is no longer subject to one external, corrupt theocrat. Instead, all religious issues shall be now redirected to the ruler who serves as the new Head of the Faith. \n\n We will also gain §G+1%§! Yearly Absolutism for §Y10§! years"
+ organised_through_bishops_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_organised_through_bishops_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ priests_may_marry_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_priests_may_marry_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ adult_baptism_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_adult_baptism_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ holy_sacraments_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_holy_sacraments_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ saints_accept_prayers_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_saints_accept_prayers_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ icons_images_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_icons_images_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ legalised_divorces_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_legalised_divorces_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ heretics_deported_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_heretics_deported_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ parish_registers_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_parish_registers_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ individual_creeds_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_individual_creeds_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ allow_usury_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_allow_usury_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ translated_bibles_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_translated_bibles_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ justified_religious_war_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_justified_religious_war_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ war_preaches_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_war_preaches_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
+ head_of_the_church_aspect_modifier:0 "教会のアスペクトへの熱狂"
+ desc_head_of_the_church_aspect_modifier:0 "信仰に新たなアスペクトが導入されたことで、人々はこの新しい規範に従って生活するようになりました。"
