--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -25,9 +25,6 @@
  REFILL_GARRISON_PROFESSIONALISM_LACKING:0 "守備隊を補充するには$LIMIT|Y%1$の§Y軍熟練度§!が必要です。"
  REFILL_GARRISON_NOT_ALLOWED:0 "守備隊を補充する能力を持っていません。"
  MODIFIER_YEARLY_ARMY_PROFESSIONALISM:0 "年間軍熟練度"
- IDEA_MAY_BUILD_SUPPLY_DEPOT:0 "補給拠点を建設可能です"
- IDEA_MAY_REFILL_GARRISON:0 "守備隊の補充が可能です"
- IDEA_MAY_RETURN_MANPOWER_ON_DISBAND:0 "解散すると人的資源が戻ります"
  MODIFIER_GENERAL_COST:0 "将軍コスト"
  MODIFIER_RESERVES_ORGANIZATION:0 "後列への士気ダメージの減少"
  MODIFIER_ATTACK:0 "戦闘ボーナス"
@@ -869,3 +866,7 @@
  DESELECT_CARPET_AREA:2 "クリックして$AREA|Y$を自動包囲地域から外す。"
  CANCEL_CARPET_SIEGE_MOVE_CONFIRM_TITLE:1 "自動包囲の中止"
  CANCEL_CARPET_SIEGE_MOVE_CONFIRM_DESC:1 "自動包囲を中止して$ARMY|Y$を移動してもよろしいですか？"
+ MODIFIER_MAY_BUILD_SUPPLY_DEPOT:0 "補給拠点を建設可能にします"
+ MODIFIER_MAY_REFILL_GARRISON:0 "守備隊の補充を可能にします"
+ MODIFIER_MAY_RETURN_MANPOWER_ON_DISBAND:0 "解散すると人的資源が戻ります"
+ maximize_profits:0 "利益を最大化"
