--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -377,7 +377,7 @@
  emp_hab_an_empire_roman_desc:0 "ローマの街をその手中に収めない限り、神聖ローマ帝国は嘲笑の的になり続けるだろう。"
  emp_hab_empire_pass_reforms_title:0 "A.E.I.O.U."
  emp_hab_empire_pass_reforms_desc:1 "神聖ローマ帝国を強化して、強国として代表できる大領土を有する国家を作りあげねばならない。また、その国家は開戦自由の独占を強いることが可能なほど権威を集権化する必要がある。ーその時初めて、フリードリヒ３世が用いた標語：アウストリー・エスト・インペラエ・オーニ・ウニヴァーゾ（全世界を統べるのはオーストリアの王朝である）、に沿うことができるだろう。"
- emp_hab_empire_pass_reforms_trigger_tooltip:0 "下記の神聖ローマ帝国の全領邦：\n  §Yオーストリア§!の評価が§Y1§!以上である。"
+ emp_hab_empire_pass_reforms_trigger_tooltip:1 "下記の神聖ローマ帝国の全領邦：\n  §Y[Root.GetName]§!の評価が§Y1§!以上である。"
  emp_hab_spread_dynasties_title:0 "[Root.GetSpreadDynastyOrFallbackMissionTitle]"
  emp_hab_spread_dynasties_desc:0 "[Root.GetHABDynastyOrFallbackMissionDesc]"
  emp_hab_spread_dynasties_has_dynasty_desc:0 "ハプスブルク家の者ができる限り多く王座に就くのは当然のことだ。我が一族のためにヨーロッパの王座を獲得せねばならない。"
@@ -1468,7 +1468,7 @@
  emp_fra_american_independence_desc:0 "我々は、ライバルに属する植民地の独立を支援するべきだ。我々はきっと自由の擁護者としての評判から恩恵を得るだろう。"
  fra_client_states_tt:1 "の従属国が§Yヨーロッパ§!に首都を持ち§Y100§!以上の総開発度を持つ"
  fra_auld_alliance_tt:0 "§Yブリテン諸島§!地方において、§Yイングランド§!もしくは§Yグレートブリテン§!以外の国家の中で、計§Y70§!以上の開発度がある全国家に対して、§Y[Root.GetName]§!の外交評価が§Y100§!以上あること"
- fra_liberation_wars_enabled_tt:0 "§Y解放§!の開戦事由を有効にします"
+ fra_liberation_wars_enabled_tt:0 "開戦事由§Y解放§!を有効化"
  fra_had_wars_of_religion:0 "§Yフランスの宗教的内戦§!の国難がある"
  fra_british_claims_tt:0 "§Y[Root.GetName]§!は、§Yイングランド§!または§Yグレートブリテン§!が領有する§Yイギリス諸島§!全域に対する請求権を獲得します。"
  fra_louisiana_colony.tooltip2:0 "§Yルイジアナ植民地§!で§Y20§!州以上、§Y[Root.GetName]§!またはその従属国（非朝貢国）で領有する。"
@@ -2273,17 +2273,17 @@
  pap_higher_curia_contribution_hidden_modifier:0 "基本："
  desc_pap_higher_curia_contribution_hidden_modifier:0 ""
  hsa_hanseatic_army_mission_title:0 "都市の防衛"
- hsa_hanseatic_army_mission_desc:0 "リューベックの街は脆弱であり、我々の軍隊は小規模で、我々の莫大な富は多くの拡張主義者になろうとする権力を誘惑する。我々は攻撃から安全であるように軍隊を構築しなければならない。"
+ hsa_hanseatic_army_mission_desc:1 "我々の街は脆弱であり、我々の軍隊は小規模で、我々の莫大な富は多くの拡張主義者になろうとする権力を誘惑する。我々は攻撃から安全であるように軍隊を構築しなければならない。"
  hsa_hanseatic_mecklenburg_mission_title:0 "ヴィスマールとロストック"
  hsa_hanseatic_mecklenburg_mission_desc:0 "我々のヴィスマールやロストックの都市との強い結びつきは、彼らがメクレンブルク公爵の意志に従うことを防げなかった。たとえ、我々自身の利益に反対する時でさえも。我々は彼らの非協力的な態度をあまりにも長く許してきたのだ。今こそ、我々は彼らをより厳しく管理する時だ。"
  hsa_baltic_trade_mission_title:0 "バルト海交易の保護"
- hsa_baltic_trade_mission_desc:0 "リューベックとハンザ同盟の富は、バルト海の交易を我々の港に送り込むことで築かれている。過去数年間、我々はそれらの地方の支配をいくらか低下させてきた。我々は、バルト海の新興勢力に対して競争力を維持できるようにするため、そこに我々の存在を再度示す必要がある。"
+ hsa_baltic_trade_mission_desc:1 "The wealth of [Root.GetName] and the Hanseatic ports is built upon funneling the Baltic trade through our ports. In past years, we have let our control over those parts slip somewhat. We must reimpose our presence there to ensure that we can remain competitive against the new rising powers of the Baltic."
  hsa_seize_jutland_mission_title:0 "ユトランド半島の奪取"
- hsa_seize_jutland_mission_desc:0 "何世紀にもわたって、交易商は商品をリューベック経由で陸路に送るか、代わりにデンマークを経由してユトランド半島を航行するという選択肢を持っていた。我々はユトランドをリューベックの所有とすることで、この二分法を終わらせなければならない。こうして、バルト海と西洋の間を通るすべての交易商がリューベックを経由する。"
+ hsa_seize_jutland_mission_desc:1 "For centuries, traders have had the choice of sending their wares over land via our markets or sailing around Jutland, going through Denmark instead. We must end this dichotomy by making Jutland a possession of our central office. Then, all traders going between the Baltic and the West will pass via ports controlled by us and our accolades."
  hsa_subjugate_norway_mission_title:0 "ノルウェーの平定"
  hsa_subjugate_norway_mission_desc:0 "ノルウェー人は長い間、ハンザ同盟の影響を取り除くことを望んできた。我々は彼らのこの願いを叶えてやるべきではない。代わりに、我々は自分たちを彼らの主君とすべきだ！"
  hsa_queen_of_the_league_mission_title:0 "女王同盟"
- hsa_queen_of_the_league_mission_desc:0 "ハンザ同盟の女王であるリューベックの街は、我が国の真の心臓部である。我々はそれにその状態に値する素晴らしさを与えるため改造しなければならない。"
+ hsa_queen_of_the_league_mission_desc:1 "Our illustrious and opulent city, the Queen of the Baltic League, is the true heart of our nation. We must renovate it to give it the splendor worthy of its status."
  hsa_return_visby_mission_title:0 "ヴィスビューの同盟復帰"
  hsa_return_visby_mission_desc:0 "ゴットランドの主要都市であるヴィスビューは、最近まで東バルト海におけるハンザ同盟の活動拠点であり、ノヴゴロド、リガ、リューベックの間の主要な中継地として機能していた。しかし、カルマル同盟の台頭により、我々は都市への影響力の低下を防ぐことができなかった。バルト海の支配を再び主張するには、島に対するデンマークとスウェーデンの主張に異議を申し立てる必要がある。"
  hsa_return_novgorod_mission_title:0 "ノブゴロド・コントール"
@@ -2300,8 +2300,8 @@
  hsa_north_sea_trade_mission_desc:0 "過去において、我々の主な富の源は常に東方との交易であった。しかし今、植民地からヨーロッパへと流れる莫大な富によって、ロシアの富はますます小さくなっている。これらの新しい交易路の北側は、北海を経由して低地地方とイングランドへと通じているが、我々は代わりに[Root.Capital.GetCapitalName]へと航海するよう交易商を説得することもできるだろう…"
  hsa_newfoundland_trading_ports_mission_title:0 "ニューファンドランド島の交易港"
  hsa_newfoundland_trading_ports_mission_desc:0 "探検家たちは、はるか西の豊かな新しい土地について語っている。その開拓を他人に任せるのは賢明ではない。"
- hsa_new_lubeck_mission_title:0 "ノイリューベック"
- hsa_new_lubeck_mission_desc:0 "新世界は野心的な人々に多くの機会を提供する。そこに大規模な植民地を設立することにより、我々は古いハンザ同盟を新たな予想もしない方向へと大きく拡大することができる。"
+ hsa_new_lubeck_mission_title:1 "Stardust Explorers"
+ hsa_new_lubeck_mission_desc:1 "The New World offers many opportunities for the ambitious. By establishing large-scale colonies there, we can greatly expand the old Baltic League in new, unforeseen directions."
  hsa_merchant_navy_mission_title:0 "商船隊"
  hsa_merchant_navy_mission_desc:0 "海賊や私掠船は我々の商船を奪うことで自身を豊かにしようとしている。我々は捕獲者からそれらを守ることができる艦隊を構築しなければならない。"
  hsa_hanseatic_shipwrights_mission_title:0 "ハンザの船大工"
@@ -2311,8 +2311,8 @@
  hsa_hanseatic_shipwrights:0 "ハンザの船大工"
  hsa_adler_von_lubeck_mission_title:0 "海の鷲"
  hsa_adler_von_lubeck_mission_desc:0 "我が海軍はハンザ同盟の生命線である。我々の海の支配に挑戦できる国家が存在する限り、我々の商業的優位は保証されない。我々は競争相手が対抗することのできない壮大な艦隊を構築する必要がある。"
- hsa_build_lubeck_krantor_mission_title:0 "リューベック・クラントル"
- hsa_build_lubeck_krantor_mission_desc:0 "リューベックへと富が流れ込んでいるので、港湾施設の規模不足が見え始めている。建築家は、彼らがクラントルと呼ぶ巨大な港湾用クレーンを建設する計画を立てた。建造費は高くつくが、船の積み下ろし作業を大幅に効率化できるので、交易商にとっては大変助かることになる。これらの計画が実現するよう、注視しておくべきだろう。"
+ hsa_build_lubeck_krantor_mission_title:1 "クラントルの建設"
+ hsa_build_lubeck_krantor_mission_desc:1 "我々の市場へと富が流れ込んでいるので、港湾施設の規模不足が見え始めている。建築家は、彼らがクラントルと呼ぶ巨大な港湾用クレーンを建設する計画を立てた。建造費は高くつくが、船の積み下ろし作業を大幅に効率化できるので、交易商にとっては大変助かることになる。これらの計画が実現するよう、注視しておくべきだろう。"
  hsa_london_steelyard_mission_title:0 "ロンドン・スティールヤード"
  hsa_london_steelyard_mission_desc:0 "ハンザの商人はすでにテムズ川沿いのスティールヤードとしてロンドンで存在感を示している。しかし、イングランド人は、ハンザ同盟に対抗する偉大な交易国家になるという彼ら自身の野心を抱いて、そこに我々の存在を仕方なく許可しているだけだ。この脅威に直面した場合の論理的な行動方針は1つしかない。我々はロンドンを完全かつ恒久的な貿易同盟の一員とする必要がある。"
  hsa_london_steelyard:0 "ロンドン・スティールヤード"
@@ -2321,20 +2321,20 @@
  hsa_hansa_in_novgorod:0 "ハンザ同盟によるノブゴロド支配"
  hanseatic_merchant_navy_modifier:0 "商船隊"
  desc_hanseatic_merchant_navy_modifier:0 "我々の交易艦隊は、海賊や私掠船による捕獲から自身をよく守ることができる。"
- hanseatic_shipwrights_modifier:0 "リューベックの水夫と船大工"
- desc_hanseatic_shipwrights_modifier:0 "リューベックの船大工と水夫は世界で最も優れた者たちの1つであり、我々の都市が海を支配できるよう海軍の奉仕に専念している。"
+ hanseatic_shipwrights_modifier:1 "水夫と船大工"
+ desc_hanseatic_shipwrights_modifier:1 "[Root.GetName]の船大工と水夫は世界で最も優れた者たちの1つであり、我々の都市が海を支配できるよう海軍の奉仕に専念している。"
  hsa_advance_our_interests_modifier:0 "拡大したハンザ同盟"
  desc_hsa_advance_our_interests_modifier:0 "ドイツ北部の交易の支配には、その見返りがある。最高の交易商が我々に加わるために集まるだけでなく、我々は商取引の問題についての権威にもなっている。"
  hsa_united_league_modifier:0 "統一したハンザ同盟"
  desc_hsa_united_league_modifier:0 "我々はハンザ同盟の力を一新し、統一国家へと再編成した。にもかかわらず、我々は自分たちの伝統を決して忘れず、多くの外交的な協力者を持つことに伴う要求に対処するための十分なものを備えている。"
  new_lubeck_modifier:0 "アメリカ植民地"
- desc_new_lubeck_modifier:0 "我々はアメリカに植民地を設立し、古いハンザ同盟が新しく予想もしない方向に進化することを可能にしている。"
+ desc_new_lubeck_modifier:1 "We have established colonies in America, allowing the old Baltic League to evolve in new, unforeseen directions."
  adler_von_lubeck_modifier:0 "海軍の覇権"
  desc_adler_von_lubeck_modifier:0 "我々の壮大な艦隊は、バルト海と北海を支配している。我々の大海原の支配に挑戦する勇気を持つ者はいない！"
  hsa_baltic_trade_modifier:0 "保護されたバルト海交易"
  desc_hsa_baltic_trade_modifier:0 "我々は、伝統的なハンザ同盟の富の源であるバルト海に我々の力を再び課した。東からの航海で、リューベックを敢えて無視する者はいない！"
- hanseatic_queen_modifier:0 "ハンザ同盟の女王"
- desc_hanseatic_queen_modifier:0 "リューベックの街の素晴らしさは、[Root.GovernmentName]と共に事業を行う多くの芸術家志望者、知識人、外国の要人たちを魅了している。"
+ hanseatic_queen_modifier:1 "The Queen of the Baltic League"
+ desc_hanseatic_queen_modifier:1 "我々の街の素晴らしさは、[Root.GovernmentName]と共に事業を行う多くの芸術家志望者、知識人、外国の要人たちを魅了している。"
  hanseatic_bookkeeping_modifier:0 "ハンザ式簿記"
  desc_hanseatic_bookkeeping_modifier:0 "我々の勤勉な簿記係は、すべての金銭がそれが属する場所ー我々の国庫へと到達することを保証する。"
  hsa_north_sea_trading:0 "北海交易路"
