--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1488,7 +1488,7 @@
  flavor_spa.13.d:0 "フランスがより強く成長し、西ヨーロッパで力を発揮し始めたことで、隣国となる不幸な我々の仲間たちは行動を起こさなければならない。脅威の増大に対処するために、我々は巧みにオーストリアのハプスブルクとの政略結婚を考え、常に各国間の良好な関係を確保している。"
  flavor_spa.13.a:0 "ハプスブルクに栄光を！$COUNTRY$に栄光を！"
  flavor_spa.14.t:0 "スペインのハプスブルクの王位"
- flavor_spa.14.d:0 "我々の共通の敵であるフランスへの反応として、$FROM$の後継者のいない[From.Monarch.GetTitle][From.Monarch.GetName]が、ハプスブルクの輝かしい一家の支流と結婚した。これにより、ハプスブルクとヨーロッパ全体の良好な関係と協力が永遠に保証される。"
+ flavor_spa.14.d:1 "我々の共通の敵であるフランスへの反応として、[From.GetName]の後継者のいない[From.Monarch.GetTitle][From.Monarch.GetName]が、ハプスブルクの輝かしい一家の支流と結婚した。これにより、ハプスブルクとヨーロッパ全体の良好な関係と協力が永遠に保証される。"
  flavor_spa.14.a:0 "一つの家は一つの敵に対して団結している。"
  flavor_spa.15.t:0 "非常に戦略的な結婚"
  flavor_spa.15.d:1 "[HAB.Monarch.Dynasty.GetName]家と我々の婚姻協定は、複雑だが潜在的に有利な状況をもたらしている。[HAB.GetAdjective]の低地諸国への最も強い主張を保持している[HAB.Monarch.Dynasty.GetName]と[Root.Monarch.Dynasty.GetName]双方の血統を持つ後継者が現れたのだ。我々がこの子を[Root.GetName]の王位継承者として承認した場合、我々は[HAB.Monarch.Dynasty.GetName]の領土の一部である低地諸国のすべての領土を継承する立場にある。"
@@ -2647,7 +2647,7 @@
  flavor_mng.17.d:0 "我が国のより近代的な制度の成長で、より近代的な制度に頼ることができるため、宮廷の派閥は力を失い、我々の$MONARCHTITLE$は今、直接支配を行っている。"
  flavor_mng.17.a:0 "これは龍の時代だ！"
  flavor_mng.EVTNAME1:0 "鄭和の大航海の後の戦略的決断"
- flavor_mng.EVTDESC1:0 "1400年頃、中国と外界との関係は変わり始めた。元朝の下では、中国は古い絹の道を再開し、ムスリム、キリスト教徒、ユダヤ人の商人を中国に呼び込んで西方との接点を作った。1367年のモンゴルの追放と明による権力の奪取は、中国をより強く外部と結びつけていた過程を逆転させた。皇帝の艦隊をインド洋とアフリカ沿岸に航行した鄭和将軍の7回の遠征（1405～1433年）に続き、中国は自身を囲い込み、外部との接続を閉じた。"
+ flavor_mng.EVTDESC1:0 "1400年頃、中国と外界との関係は変わり始めた。元朝の下では、中国は古い絹の道を再開し、ムスリム、キリスト教徒、ユダヤ人の商人を中国に呼び込んで西方との接点を作った。1367年のモンゴルの追放と明による権力の奪取は、中国をより強く外部と結びつけていた過程を逆転させた。皇帝の艦隊をインド洋とアフリカ沿岸に航行した鄭和の7回の遠征（1405～1433年）の後、中国は自身を囲い込み、外部との接続を閉じた。"
  flavor_mng.EVTOPTA1:0 "国内を万全にする。"
  flavor_mng.EVTOPTB1:0 "バランスの取れた位置に。"
  flavor_mng.EVTOPTC1:0 "外部に拡張する。"
@@ -2683,7 +2683,7 @@
  flavor_mng.EVTOPTA9:0 "反乱を鎮圧するには我々は弱すぎる"
  flavor_mng.EVTOPTB9:0 "反乱軍の鎮圧を試みよ"
  flavor_mng.EVTNAME10:0 "白蓮教徒の結社"
- flavor_mng.EVTDESC10:0 "秘密の革命的な結社である白蓮教は、再び一般の人々の間で人気を博している。モンゴル人の元朝の最後の年に、彼らは外国の君主に対して抵抗を組織し、そして今、彼らは再びそうしているが、明王朝に反対している！これらの革命的な結社をどう扱うべきだろうか？"
+ flavor_mng.EVTDESC10:1 "秘密の革命的な結社である白蓮教は、再び一般の人々の間で人気を博している。モンゴル人の元朝の最後の年に、彼らは外国の君主に対して抵抗を組織し、そして今、彼らは再びそうしているが、王朝に反対している！これらの革命的な結社をどう扱うべきだろうか？"
  flavor_mng.EVTOPTA10:0 "フン、これらの結社が永続的に害を及ぼすことはない！"
  flavor_mng.EVTOPTB10:0 "帝国の力で反乱を鎮圧しよう。"
  flavor_mng.EVTNAME11:0 "金融危機"
@@ -4151,7 +4151,7 @@
  flavor_azt.1.t:0 "テノチティトランの大ピラミッド"
  flavor_azt.1.d:0 "我々の祖先がアスカポツァルコのテパネカの支配を振り払い、代わりにテノチティトラン、テスココ、トラコパンのアステカ三国同盟に参加してから数年が経過した。それ以来、我々の国民の力は大きく成長しており、今や我々の国家は全メキシコ盆地を支配している。我々の支配下にある都市国家は、我々がこの間まで対等だったことをまだ覚えているので、彼らの忠誠心がどれだけ信頼できるかは未知数である。\nテノチティトランの大ピラミッドの新しい舞台を建設することはすべての統治者たちの仕事であるため、従属国の忠誠心を試す絶好の機会である。プロジェクトに貢献する従属都市は専念させられ過ぎて反乱できず、拒否する従属都市はそれだけの価値を示すか、さもなくば罰せられるだろう。"
  flavor_azt.1.a:0 "全ての我々の従属国は、ピラミッド建設に貢献しなければならない！"
- flavor_azt.1.a.tt:0 "我々の州はピラミッドの費用の一部を負担するだろう。"
+ flavor_azt.1.a.tt:1 "我々の州はピラミッドの費用の一部を負担するだろう。\n全領有州（§Y[Root.Capital.GetName]§!は除く）以下の効果§Y2§!つの内1つを受け取ります：\n§Y80.00%§!の確率で：\nゲーム終了まで州補正「§Y偉大な神殿への貢献§!」を獲得し、以下の効果を得ます：\n月間自治率変動：§G-0.02§!\n\n§Y20.00%§!の確率で：\n§R6§!§Y貴族§!連隊が蜂起します。"
  flavor_azt.1.b:0 "このプロジェクトのため我々自身の資金を使おう。"
  flavor_azt.2.t:0 "ピラミッドプロジェクトへの反応"
  flavor_azt.2.d:0 "我々が疑った通り、全ての我々の支配下の都市が、彼らの資源を我々が処分する機会を持つことを歓迎した訳ではなかった。我々が望んでいたよりも多くの費用を負担しなければならないことは明らかだ。"
@@ -4526,7 +4526,7 @@
  flavor_cri.1.t:0 "クリミア・ハン国の継承権"
  flavor_cri.1.d:0 "抜け目ない外交官で有能な統治者でもあるハージー・ギレイは、人生の大部分をキプチャクの支配下から離れて彼自身の強力なハン国を作り上げることに費やした。生き残るためなら、ハージーは自分の目的をより可能にする国ならどことでも協定を結ぶのを躊躇わなかった。ポーランド、リトアニア、ジェノヴァ、キプチャクなどの飢えた国々に囲まれたクリミアは、自立し成長できるかどうかという困難な道を歩かなければならない。我らがハンは、多かれ少なかれ資格のある潜在的な後継者を数多く残しているが、彼らの共通の焦点は、誰が王位を継ぐのかにあるため、このハン国の運命は不確かなようだ。\n南には、新たな勢力が鋭い関心を持ってこの進展を見ており、王位請求者が利用されるのはすぐだろうという事実がある。"
  flavor_cri.1.a:0 "オスマン帝国に保護を求める"
- flavor_cri.1.a.tt:0 "新しい§Y[Root.Monarch.GetTitle]§!は、§Yオスマン§!の辺境として§Yクリミア§!の強制労働を申し出るだろう。\nまた§Yオスマン§!は§Yテオドロ§!、§Yカッファ§!、§Yマテガ§!、§Yアゾフ§!の直接支配が与えられることを要求するだろう。"
+ flavor_cri.1.a.tt:1 "新しい§Y[Root.Monarch.GetTitle]§!は、§Yオスマン§!の朝貢国として§Yクリミア§!の強制労働を申し出るだろう。\nまた§Yオスマン§!は§Yテオドロ§!、§Yカッファ§!、§Yマテガ§!、§Yアゾフ§!の直接支配が与えられることを要求するだろう。"
  flavor_cri.1.b:0 "オスマン帝国の助けがなくてもよい。"
  flavor_cri.1.b.tt:0 "§Yクリミアの僭称者§!は§Yオスマン§!の支持を求めるだろう！"
  flavor_cri.2.t:0 "クリミア・ハン国の運命"
@@ -5030,3 +5030,29 @@
  alhambra_working_force:0 "アルハンブラの人材"
  desc_alhambra_working_force:0 "ユダヤ人、ムスリムなどの異端者の集団は残留を許された。その結果、さもなければ追放していたであろう投資家や労働力を手に入れることができた。"
  flavor_bur.EVTOPTB10:0 "オラニオの名において、門よ開け！"
+ hre_event.8.t:0 "[From.GetName]'s Offer for the Electorate"
+ hre_event.8.desc:0 "The [From.Monarch.GetTitle] of [From.GetName] has come to our court with a rather generous offer. For 6000 units of Ducats, the [From.Monarch.GetTitle] wishes that the position of Electorate of the Holy Roman Empire shall be transferred from his subject to [From.Monarch.GetHerHim]. Some might argue that such role should be not purchasable, but our treasury could certainly need the gold."
+ hre_event.8.a:0 "Accept the offer."
+ hre_event.8.b:0 "Send [From.Monarch.GetHerHim] home."
+ hre_event.9.t:0 "The [From.Monarch.GetTitle] accepts our Offer!"
+ hre_event.9.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made an offer to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] accepted the offer!"
+ hre_event.9.a:0 "Splendid!"
+ hre_event.9.a.tt:1 "§Y[This.GetName]§! is no longer §YElector§! of the Holy Roman Empire."
+ hre_event.10.t:0 "The [From.Monarch.GetTitle] rejects our Offer!"
+ hre_event.10.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made an offer to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] rejected the offer."
+ hre_event.10.a:0 "Curse you, [From.Monarch.GetTitle]!"
+ hre_event.11.t:0 "[From.GetName]'s Request for the Electorate"
+ hre_event.11.desc:0 "The [From.Monarch.GetTitle] of [From.GetName] has come to our court and wordes [From.Monarch.GetHerHis] request: the [From.GovernmentName] of [From.GetName] asks for the transfer of electorate from their subject to them. The [From.Monarch.GetTitle] also points out that our both realms have a tight relationship, and if we fulfill this request we might gain some favors from [From.GetName]."
+ hre_event.11.a:0 "Accept the request."
+ hre_event.11.b:0 "Send [From.Monarch.GetHerHim] home."
+ hre_event.12.t:0 "The [From.Monarch.GetTitle] accepts our Request!"
+ hre_event.12.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made a request to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] accepted the request!"
+ hre_event.12.a:0 "Splendid!"
+ hre_event.13.t:0 "The [From.Monarch.GetTitle] rejects our Request!"
+ hre_event.13.desc:0 "After travelling to [From.Capital.GetName], capital of [From.GetName] and Holy Roman Empire, our [Root.Monarch.GetTitle] made a request to [From.Monarch.GetTitle] [From.Monarch.GetName] to transfer the role of Electorate from our subject to the [Root.GetAdjective] [Root.GovernmentName].\nAfter a few moments of consideration, the [From.Monarch.GetTitle] rejected the request!"
+ hre_event.13.a:0 "Curse you, [From.Monarch.GetTitle]!"
+ hre_event.14.t:0 "[From.GetName] usurped our Electorate!"
+ hre_event.14.desc:0 "Our overlord, [From.GetName], managed to transfer our unique Electorate! We are no longer an elector within the Holy Roman Empire!"
+ hre_event.14.a:0 "What a horrible day..."
+ flavor_cri.2.a.ct:1 "§Y[TUR.GetName]§! will make §Y[CRI.GetName]§! to their Tributary State.\n§Y[CRI.GetName]§! grants independence to all its §YTributary State§! subjects."
+ flavor_teu.3.b:0 "The Prussians will serve under our sovereignty."
