--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1,13 +1,13 @@
 ﻿l_english:
  theocracy.1.t:0 "$COUNTRY$に必要な後継者"
  theocracy.1.desc:0 "$MONARCHTITLE$$MONARCH$には、現在後継者がいないが、いくつかの選択肢はある。"
- theocracy.1.a:0 "地方の貴族"
- theocracy.1.b:0 "外国の貴族"
+ theocracy.1.a:0 "地元貴族"
+ theocracy.1.b:0 "外国貴族"
  theocracy.1.c:0 "商人の息子"
  theocracy.1.d:0 "教皇の門徒"
  theocracy.1.e:0 "有能な神学者"
- theocracy.1.f:0 "地方の宣教師"
- theocracy.1.g:0 "地方のイマーム・ハティーブ"
+ theocracy.1.f:0 "地元宣教師"
+ theocracy.1.g:0 "地元のイマーム・ハティーブ"
  theocracy.1.h:0 "有力な改革派"
  parlaments.1.t:1 "都市が[Root.Owner.GetParliamentName]の席を要求"
  parlaments.1.d:1 "$PROVINCENAME$は富を蓄え、繁栄する都市となった。今や彼らは議会の席を要求している。都市代表の主張は「代表なくして課税なし」の原則に沿ったものになるだろう。"
@@ -569,7 +569,7 @@
  orthodox_flavor.3.b:0 "古の道が正しい。"
  orthodox_flavor.4.t:0 "教会の独立性を減らす"
  orthodox_flavor.4.d:0 "教会は権力を有する機関だが、より重要なのは裕福であることだ。我々が教会を支配して、より国家の一部となるならば、課税でより多くの収入を得るだろう。一方、大衆の目から見れば、我々がその権限を奪うということにもなるだろう。"
- orthodox_flavor.4.a:0 "彼らを支配する。"
+ orthodox_flavor.4.a:0 "彼らを抑制する。"
  orthodox_flavor.4.b:0 "彼らの独立を守ろう。"
  orthodox_flavor.5.t:0 "国が一般会員を任命したのか？"
  orthodox_flavor.5.d:0 "我々が教会運営における一般会員の権力を促進し、強化し、国家がより多くを任命するようにすれば、我々は教会を中央の支配下に置くことになるだろう。見方を変えれば、我々がその人々と共に教会の道徳的地位を損ねることになる。"
@@ -695,7 +695,7 @@
  republics.10.d:0 "共和国は支配者たちの賛同された共通目的によって機能する。その支配者たちは支配を受ける側の人々の確固とした意志をその都度表明する。我々の共和国は我々を強くしてきた伝統に背を向けてきた。指導評議会の結束力の欠如により、我々の軍事力は失われている。"
  republics.10.a:0 "これは良くない！"
  republics.11.t:0 "政府に影響を与える紛争"
- republics.11.d:0 "重要な一族が進んで共和国の利益を自分の利益と同等に扱うとき、共和国は成功していると言える。現在、共和制の伝統は圧迫されており、一族は共和国よりも自分の利益を追求している。これは、合意形成がより困難であるため、我々の統治能力を傷つけている。"
+ republics.11.d:1 "重要な一族が進んで共和国の利益を自分の利益と同等に扱うとき、共和国は成功していると言える。現在、共和制の伝統は圧迫されており、一族は共和国よりも自分の利益を追求している。これは、合意形成がより困難であるため、我々の統治能力を傷つけている。"
  republics.11.a:0 "これは良くない！"
  republics.12.t:0 "交易戦争"
  republics.12.d:0 "我々は常に商人同士の健全な競争を奨励したが、同時に彼らは常に共和国の利益を最優先に考えた。我々は、共和国の交易がライバルの利益に対し勝っていることを確実にするために協力しただろう。今ではこの伝統は衰退しつつあり、商人の階級を兄弟同士で争うことが増加しつつある。このことは我々の国を傷つけている…"
@@ -1685,7 +1685,7 @@
  china_events.6.a:0 "この贈り物を受け取らねばならないのだ！"
  china_events.6.b:0 "我々の評判を落とすわけにはいかない。"
  china_events.7.t:0 "ただの紙切れ"
- china_events.7.d:0 "政府が裏づけのない紙幣をどんどん発行しているため、政府の通商部門はインフレが間もなく$COUNTRY$帝国各地で深刻な問題になることを懸念しており、民衆はこれが天命の喪失の兆候であると噂し始めている。\n本日、代表者が参内し、臨時税と国庫の改革によって経済を活性化させる計画を献策した。"
+ china_events.7.d:1 "政府が裏づけのない紙幣をどんどん発行しているため、政府の通商部門はインフレが間もなく[Root.GetAdjective]帝国各地で深刻な問題になることを懸念しており、民衆はこれが天命の喪失の兆候であると噂し始めている。\n本日、代表者が参内し、臨時税と国庫の改革によって経済を活性化させる計画を献策した。"
  china_events.7.a:0 "どれも非常に興味深い！"
  china_events.7.b:0 "弱みを見せるわけにはいかない、行動しなければ！"
  china_events.7.c:0 "我々は内閣大学士を信頼している。"
@@ -3196,40 +3196,40 @@
  EVTDESC1425:0 "これらのいわゆる巡礼者は、我々の$COUNTRY_RELIGION$教会が忌み嫌うカトリック信仰に従っている。彼らは邪悪な信仰に従っており、おそらく植民地で滅びることになるだろう。"
  EVTNAME4104:0 "$MASTER_OF_MINT$"
  EVTDESC4104:0 "硬貨は決して純粋ではないが、鋳造は完全な効率性の下に機能しており、$MASTER_OF_MINT$がその責任を負っている。"
- EVTOPTA4104:0 "$MASTER_OF_MINT_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4104:0 "$MASTER_OF_MINT_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4104:1 "[Root.Adm_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4104:1 "[Root.Adm_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4110:0 "$NAVIGATOR$"
  EVTDESC4110:0 "$NAVIGATOR$の評判は誰にも負けることはなく、$NAVIGATOR$の才能のお陰で、我々の水兵たちは他の同等の国よりもさらに航海することができる。"
- EVTOPTA4110:0 "$NAVIGATOR_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4110:0 "$NAVIGATOR_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4110:1 "[Root.Dip_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4110:1 "[Root.Dip_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4114:0 "$GRAND_CAPTAIN$"
  EVTDESC4114:0 "良い人物が作戦を指揮していることを知っていれば、軍隊は気分が良いものだ。$GRAND_CAPTAIN$は、おそらく我が国が今まで見た中で最も偉大な軍事的精神である。"
- EVTOPTA4114:0 "$GRAND_CAPTAIN_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4114:0 "$GRAND_CAPTAIN_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4114:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4114:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4115:0 "$ARMY_ORGANISER$"
  EVTDESC4115:0 "第一級の組織者として、$ARMY_ORGANISER$は我々の軍隊共に素晴らしい仕事をした。$ARMY_ORGANISER$の能力に対する噂は広範囲に広がっている。"
- EVTOPTA4115:0 "$ARMY_ORGANISER_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4115:0 "$ARMY_ORGANISER_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4115:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4115:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4116:0 "$COMMANDANT$"
  EVTDESC4116:0 "卓越した訓練教官である$COMMANDANT$は、我々の軍隊を戦場で尻込みすることのない正確な機械人形に変えた。"
- EVTOPTA4116:0 "$COMMANDANT_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4116:0 "$COMMANDANT_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4116:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4116:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4117:0 "$QUARTERMASTER$"
  EVTDESC4117:0 "軍隊内の多くの人、特に戦闘の外でさまざまなものが原因で死に至る人たちには、補給将校は何もしていないように見える。しかし、物流の複雑さを理解する人には、$QUARTERMASTER$は真の天才である。"
- EVTOPTA4117:0 "$QUARTERMASTER_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4117:0 "$QUARTERMASTER_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4117:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4117:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4118:0 "$RECRUITMASTER$"
  EVTDESC4118:0 "軍に加わることは、通常、死刑宣告に等しい。あなたが実際に様々な病気や栄養不足から生き残っても、誰かがやって来て、戦闘で（通常は敵軍が）撃ちかかってくる。これを念頭に置いて、人々はできれば志願したくはないと考えているが、$RECRUITMASTER$は彼らの才能を使って、さらに多くの兵士が軍に加わるよう説得する。"
- EVTOPTA4118:0 "$RECRUITMASTER_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4118:0 "$RECRUITMASTER_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4118:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4118:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4119:0 "$FORTIFICATION_EXPERT$"
  EVTDESC4119:0 "我々の敵に対して、我々の要塞を守る努力は臆病に思える。しかし、最後に笑うのは$FORTIFICATION_EXPERT$である。我々が要塞の中にぴったりと座っている間に、消耗がゆっくりと我々の敵を奪っていくからである。"
- EVTOPTA4119:0 "$FORTIFICATION_EXPERT_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4119:0 "$FORTIFICATION_EXPERT_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4119:1 "[Root.Mil_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4119:1 "[Root.Mil_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME4120:0 "$INQUISITOR$"
  EVTDESC4120:0 "尋問するための正しい質問だけを常に理解していることで、$INQUISITOR$は我々を脅かす人の心に恐怖を吹き込む。任務が始まる前に失敗の種を植え付けるには$INQUISITOR$の存在だけで十分だ。"
- EVTOPTA4120:0 "$INQUISITOR_CAP_POSS_PRONOUN$の努力は全国で賞賛されるだろう。"
- EVTOPTB4120:0 "$INQUISITOR_CAP_POSS_PRONOUN$の評判は我々の国境を越えて伝わるだろう。"
+ EVTOPTA4120:1 "[Root.Adm_Advisor.GetHerHisCap]の努力は国内で賞賛されるだろう。"
+ EVTOPTB4120:1 "[Root.Adm_Advisor.GetHerHisCap]の評判は我々の国境よりさらに遠くまで届くだろう。"
  EVTNAME9200:0 "裕福な隣国"
  EVTDESC9200:0 "$COUNTRY_ADJ$の国境を超えた富についての噂は、$MONARCHTITLE$$MONARCH$に達した。$COUNTRY$国内の派閥は、特定の都市は正当に我々のものであるべきだと主張してきた。または少なくとも略奪するか…"
  EVTOPTA9200:0 "機は熟した。"
@@ -4586,3 +4586,12 @@
  random_event.EVTOPTG2:0 "ケベック文化を受け入れる。"
  random_event.EVTOPTH2:0 "ルイジアナ文化を受け入れる。"
  lunar_new_year:0 "元日"
+ theocracy.1.j:0 "どの候補者が我々の後継者になるか運命に任せよう。"
+ theocracy.1.j.a:0 "地元貴族が後継者になる。"
+ theocracy.1.j.b:0 "外国貴族が後継者になる。"
+ theocracy.1.j.c:0 "商人の息子が後継者になる。"
+ theocracy.1.j.d:0 "教皇の門徒が後継者になる。"
+ theocracy.1.j.e:0 "有能な神学者が後継者になる。"
+ theocracy.1.j.f:0 "地元宣教師が後継者になる。"
+ theocracy.1.j.g:0 "地元のイマーム・ハティーブが後継者になる。"
+ theocracy.1.j.h:0 "有力な改革家が後継者になる。"
