--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -23,7 +23,7 @@
  portuguese_bombardier:0 "ポルトガルの砲兵"
  portuguese_bombardier_desc:0 "海軍の弾幕は特別な一種の芸術であり、我々の砲兵よりも優れた熟練者などいない。"
  portuguese_trade_route_map:0 "ポルトガルの交易航路地図"
- portuguese_trade_route_map_desc:0 "地図上の点同士の最短距離は直線であるが、ポルトガルの交易路は僅差で次点である。"
+ portuguese_trade_route_map_desc:0 "地図上の2点間の最短距離は直線であるが、ポルトガルの交易路は僅差で次点である。"
  spanish_grand_armada:0 "スペイン大無敵艦隊"
  spanish_grand_armada_desc:0 "スペイン船は世界中の海を航海を乗り越え、旗艦と共にさらなる航海に乗り出す。"
  spanish_treasure_fleet:0 "スペイン財宝船団"
@@ -207,9 +207,9 @@
  PIRATE_PRINCESS:0 "海賊女公"
  PIRATE_QUEEN:0 "海賊女王"
  PIRATE_EMPRESS:0 "海賊女帝"
- mechanic_force_admiral_leader_yes:0 "新たな統治者が提督となります。"
+ mechanic_force_admiral_leader_yes:1 "新たな統治者が§Y提督§!となります。"
  mechanic_force_admiral_leader_no:0 ""
- mechanic_admirals_become_rulers_yes:0 "現在の統治者が死亡した時、提督が統治者となります。"
+ mechanic_admirals_become_rulers_yes:1 "現在の統治者が死亡した時、§Y提督§!が統治者となります。"
  mechanic_admirals_become_rulers_no:0 ""
  pirates.1.t:0 "[Root.GovernmentName]の選挙"
  pirates.1.desc:0 "盗人や人殺しの国を支配する[Root.Monarch.GetTitle]の唯一の政治思想は何者にも支配されないことだ。それはサメを放牧するような仕事だが、勇敢なあるいは愚鈍な魂によってその役割が果たさなければならない。\n\n[Root.Monarch.GetTitle]を再び選択する時だ。[Root.Monarch.GetName]は[Root.Monarch.GetHerHis]の権限を放棄することを考えていない。[Root.Monarch.GetName]は集まった海賊たちに説得か恫喝によって[Root.Monarch.GetHerHis]による統治が[Root.Monarch.GetHerHis]の対立候補の統治よりも優れていることを納得させなくてはならない。"
@@ -302,7 +302,7 @@
  pirates.20.t:0 "海賊の黄金時代"
  pirates.20.d:0 "植民地国家間での戦争は流血沙汰となり、破壊と悪行の爪痕が残される。カリブ海では海賊行為が横行している。かつての私掠船は、平時などというのは儲けにならないと悟って黒旗を掲げるようになっている。一方、戦後処理で権限が剥奪された海軍の船長たちは、かつての君主の命令に従おうとしない。このような大国間での対立は意図せず海賊の黄金時代の幕開けとなってしまった。"
  pirates.20.a:0 "なんて傍迷惑な。それとも絶好の機会になるか？"
- golden_age_of_piracy_tooltip:0 "§Y海賊の黄金時代§!によって与えられる補正は50年間有効になります。"
+ golden_age_of_piracy_tooltip:0 "トリガー補正§Y海賊の黄金時代§!は50年間有効になります。"
  golden_age_of_piracy:0 "海賊の黄金時代"
  desc_golden_age_of_piracy:0 "カリブ海では海賊行為が横行している。この海を渡るすべての商船は海賊や私掠船の許可を得て航海している。"
  become_pirates_decision_title:0 "黒旗を掲げる"
@@ -320,7 +320,6 @@
  MODIFIER_NAVAL_TRADITION_FROM_TRADE:2 "交易を保護からの海軍伝統"
  MODIFIER_ADMIRAL_COST:0 "提督コスト"
  MODIFIER_EXPEL_MINORITIES_COST:0 "マイノリティ追放コスト"
- IDEA_MAY_FABRICATE_FOR_VASSALS:1 "属国に対する請求権の捏造が可能になります。"
  order_events.1.t:0 "原住民政策に対するドミニコ会の反対"
  order_events.1.d:0 "我が国の植民地設立の初期から尽力し、他の多くの人とともに修道会の立場から監督してくれたドミニコ会の修道士が[las_casas_province.GetName]から[Root.GetName]へ戻ってきた。彼はアメリカ植民地での先住民の扱いに反対し、我が国の厳しい植民地政策を非難している。\n\n彼は功績者としての過去を捨て、[Root.Monarch.GetName]の前に現れ、[Root.Monarch.GetHerHim]に先住民の扱いの改善のため説得を行った。"
  order_events.1.a:0 "[Root.GetName]はキリスト教国である。寛容を示さなければならない。"
@@ -392,7 +391,7 @@
  DISALLOWED_TRADE_GOODS:0 "交易禁止品："
  DEATH_NAMED_GENERAL_BECOMES_RULER:0 "$NAME|Y$将軍が国家を統治する。"
  DEATH_GENERAL_BECOMES_RULER:0 "将軍が国家を統治する。"
- mechanic_generals_become_rulers_yes:0 "現在の統治者が死亡した時、将軍が統治者となります。"
+ mechanic_generals_become_rulers_yes:1 "現在の統治者が死亡した時、§Y将軍§!が統治者となります。"
  mechanic_generals_become_rulers_no:0 ""
  manufacturing_center:0 "帝国の製造中心地"
  manufacturing_center_desc:0 "市民こそ我が国の交易帝国の力の源である。外国の生産品を輸入し我が国で加工している。"
@@ -520,7 +519,7 @@
  Conflict_in_the_Caribbean:0 "カリブ海での衝突"
  PW_SEND_MISSIONARY_COST:0 "$COST|Y$¤"
  MONTHLY_COST:0 "月間コスト"
- mechanic_gives_war_against_the_world_tooltip_dummy_yes:0 "「世界に対する戦争」の開戦事由を有効にする"
+ mechanic_gives_war_against_the_world_tooltip_dummy_yes:1 "開戦事由「§Y世界に対する戦争§!」を有効化"
  NO_RELIGIOUS_UNITY_PENALTY:0 "異端や異教の州は宗教統一度に関するペナルティを受けません。"
  CANNOT_AFFORD_COST:0 "現在 $AMOUNT|Y$$CURRENCY$ を所持していません。"
  SELECT_PROVINCE:0 "州を選択"
@@ -537,3 +536,5 @@
  lottery_candidate_bonus_plural:0 "§Yランダム候補ボーナス§!：各候補はランダムに選ばれたスキルが§G1§!変化しています。"
  STEPPE_HORDE_BENEFITS:0 "\n§Yステップの遊牧民§!政府改革により以下のボーナスを得ます：\n国家人的資源補正：§G+20.0%§!\n陸軍扶養限界補正：§G+20.0%§!\n分離主義の年数：§G-5§!\n略奪速度：§G+50.00%§!\n制度の普及：§R-15.0%§!\n移動速度：§G+20.00%§!\n補充コスト：§G-50.0%§!\n騎兵と歩兵の比率：§G+25.0%§!"
  flavor_nav.5.a.tt:0 "§Y[ARA.Monarch.Dynasty.GetName]§!家の一員が[ARA.GetName]を統治するでしょう。"
+ flavor_tun.EVTOPTC1:0 "彼にアルジェの自由な自治権を与える。"
+ MODIFIER_MAY_FABRICATE_FOR_VASSALS:1 "従属国への請求権の捏造"
