--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -137,7 +137,7 @@
  mnd_siam_japan_title:0 "日本への使節団"
  mnd_siam_japan_desc:0 "日本の支配者は外国からの影響に不信感を抱いているため、彼らと仲良くなるのは難しいことで有名だ。しかし、首尾よく大使館を開設できれば、自国のために戦ってくれる恐ろしき侍たちを招き寄せることができるかもしれない。"
  japanese_mercs_flag:0 "傭兵団の§Y日本人志願兵§!が利用可能になる"
- merc_japanese_volunteers:0 "日本人志願兵"
+ merc_japanese_volunteers:1 "§J日本人志願兵§!"
  siam_mandala_modifier:0 "大マンダラ"
  desc_siam_mandala_modifier:0 "マンダラを自国の政府の模範とすることで、全員が自分の居場所を知る、真に調和のとれた国家を作り上げた。"
  siam_monument_modifier:0 "歴史的建造物の建造者"
@@ -350,16 +350,16 @@
  maj_religious_unity:0 "宗教的平和"
  desc_maj_religious_unity:0 "国内の宗教的平和を目指している。"
  is_buddhist_tt:0 "§Y仏教§!を信仰している"
- majapahit_cb_1_tt:0 "主要文化が§Yマレー§!文化の国家に対して、§Yマジャパヒト軍事作戦§!の開戦事由が使用可能になります"
- majapahit_cb_2_tt:0 "技術グループが§Y中華§!技術グループの国家に対して、§Yマジャパヒト軍事作戦§!の開戦事由が使用可能になります"
- majapahit_cb_3_tt:0 "§Y全国家§!に対して、§Yマジャパヒト軍事作戦§!の開戦事由が使用可能になります"
+ majapahit_cb_1_tt:0 "主要文化が§Yマレー§!文化の国家に対する開戦事由§Yマジャパヒト戦役§!を有効化"
+ majapahit_cb_2_tt:0 "技術グループが§Y中華§!技術グループの国家に対する開戦事由§Yマジャパヒト戦役§!を有効化"
+ majapahit_cb_3_tt:0 "§Y全国家§!に対する開戦事由§Yマジャパヒト戦役§!を有効化"
  buddha_deity_tt:0 "個人の主神として§Yお釈迦様§!が開放されます"
  propagate_religion_maj_tt:0 "交易政策の§Y宗教の伝播§!が開放されます\n領有する州の内、宗教が§Yヒンドゥー教§!の州については、交易政策の§Y宗教の伝播§!の影響を受けなくなります"
  maj_china_coast_claims_tt:0 "§Y[Root.GetName]§!は、§Y中国§!亜大陸にある§Y沿岸§!州全てに、恒久的な請求権を獲得します"
  VASSAL_MISSION_WAR_NAME_MAJ:0 "$SECOND_NAME$に対する$ORDER$$FIRST$軍事作戦"
- cb_vassalize_majapahit:0 "マジャパヒト軍事作戦"
+ cb_vassalize_majapahit:0 "マジャパヒト戦役"
  cb_vassalize_majapahit_desc:0 "崩壊寸前から、マジャパヒト帝国は蘇り、いつでも属国化の軍事行動が再開できる。"
- cb_vassalize_malacca:0 "マラッカ軍事作戦"
+ cb_vassalize_malacca:0 "マラッカ戦役"
  cb_vassalize_malacca_desc:0 "マラッカはヌサンタラの覇者としてマジャパヒトに取って代わった。逆らう者は全て討伐されるだろう。"
  maj_reduced_lib_desire:0 "忠誠の強要"
  desc_maj_reduced_lib_desire:0 "マジャパヒトの宗主に忠誠を誓った。"
@@ -465,10 +465,10 @@
  bli_majapahit_refugees:0 "マジャパヒト難民"
  desc_bli_majapahit_refugees:0 "マジャパヒトから貴族を迎え入れた。彼らは喜んで自国の宮廷に仕えてくれている。"
  atj_propagate_religion_tt:0 "交易政策の§Y宗教の伝播§!について、ノード内での必要交易力が§Y35%§!で済むようになります。"
- atj_holy_war_cb_sumatra_tt:0 "主要文化が§Yスマトラ§!文化で§Y異教§!の国家に対して、§Yイスラムの剣§!の開戦事由が使用可能になります"
- atj_holy_war_cb_java_tt:0 "主要文化が§Yジャワ§!文化か§Yスンダ§!文化で§Y異教§!の国家に対して、§Yイスラムの剣§!の開戦事由が使用可能になります"
- atj_holy_war_cb_moluccas_tt:0 "主要文化が§Yスラウェシ§!文化か§Yモルッカ§!文化で§Y異教§!の国家に対して、§Yイスラムの剣§!の開戦事由が使用可能になります"
- atj_holy_war_cb_neighbors_tt:0 "§Y異教の隣国全て§!に対して、§Yイスラムの剣§!の開戦事由が使用可能になります"
+ atj_holy_war_cb_sumatra_tt:0 "主要文化が§Yスマトラ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
+ atj_holy_war_cb_java_tt:0 "主要文化が§Yジャワ§!文化か§Yスンダ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
+ atj_holy_war_cb_moluccas_tt:0 "主要文化が§Yスラウェシ§!文化か§Yモルッカ§!文化で§Y異教§!の国家に対する開戦事由§Yイスラムの剣§!を有効化"
+ atj_holy_war_cb_neighbors_tt:0 "§Y異教の隣国全て§!に対する開戦事由§Yイスラムの剣§!を有効化"
  atj_sumatra_islam_tt:0 "主要文化が§Yスマトラ§!文化である国家全てが§Yイスラム教§!の信仰を受け入れている"
  atj_java_islam_tt:0 "主要文化が§Yスンダ§!文化か§Yジャワ§!文化である国家全てが§Yイスラム教§!の信仰を受け入れている"
  atj_moluccas_islam_tt:0 "主要文化が§Yモルッカ§!文化か§Yスラウェシ§!文化である国家全てが§Yイスラム教§!の信仰を受け入れている"
@@ -579,7 +579,7 @@
  desc_mlc_morale:0 "マラッカはマレー半島を統一した。"
  mlc_subjects:0 "属国の君主"
  desc_mlc_subjects:0 "多くの国が自国に従属し、彼らの忠誠心は担保されている。"
- mlc_cb_tt:0 "主要文化が§Yマレー§!文化の国家に対して、§Yマラッカ軍事作戦§!の開戦事由が使用可能になります"
+ mlc_cb_tt:0 "主要文化が§Yマレー§!文化の国家に対する開戦事由§Yマラッカ戦役§!を有効化"
  lxa_mph_title:0 "ムアン・プアンの支配"
  lxa_mph_desc:0 "ムアン・プアンは、非常に長い期間、ラーンサーンによる直接支配から逃れてきた。彼らは自国に統合されねばならない。"
  lxa_dai_title:0 "大越侵攻"
