--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -374,7 +374,7 @@
  flavor_kon.15.t:0 "[Root.GetName]代表の枢機卿！"
  flavor_kon.15.d:0 "[From.GetName]との取引は完全な成功を収め、[Root.GetName]は現在、聖座の枢機卿の座の保有が確約されました！"
  flavor_kon.15.a:0 "神様は良い人！"
- flavor_kon.15.a.tt:1 "§Y[This.GetName]§!は、補正「§Yアフリカの枢機卿§!」を獲得し、有効時は以下の効果を得ます：\n州の税補正：§G+25.0%§!\n真の信仰の寛容度：§G+1.00§!\n年間教皇への影響力：§G+1.00§!\n[Root.GetClergyName]階級の忠誠均衡値：§G+10.0%§!\n\nさらに、[Root.GetName]が[This.GetName]を管理し、[Root.GetName]と[This.GetName]州が§Yカトリック§!信仰である限り、この州に常時§Y枢機卿§!が置かれるようになります。"
+ flavor_kon.15.a.tt:1 "§Y[This.GetName]§!は、トリガー補正「§Yアフリカの枢機卿§!」を獲得し、有効時は以下の効果を得ます：\n州の税補正：§G+25.0%§!\n真の信仰の寛容度：§G+1.00§!\n年間教皇への影響力：§G+1.00§!\n[Root.GetClergyName]階級の忠誠均衡値：§G+10.0%§!\n\nさらに、[Root.GetName]が[This.GetName]を管理し、[Root.GetName]と[This.GetName]州が§Yカトリック§!信仰である限り、この州に常時§Y枢機卿§!が置かれるようになります。"
  flavor_zim.1.t:0 "ジンバブエの縮退"
  flavor_zim.1.d:2 "ジンバブエはかつてジンバブエ帝国の大首都で、ジンバブエ帝国は何世紀も前に内戦によって崩壊してしまいました。それ以来、この都市は多くの石造りの家々が並ぶ素晴らしい首都として機能しています。\nしかし、この首都は余命いくばくもありません。この大都市を支えてきた作物は不足し、長きに渡って都市の経済を維持してきた資源も枯渇、現地住民はその不安に追いたてられ、[Root.GetName]の他の州への移動を余儀なくさせられたのです。"
  flavor_zim.1.a:1 "ジンバブエにとって暗黒の時代だ…"
@@ -588,7 +588,7 @@
  negusa_nagast_legacy:0 "ネグサ・ナガスト君主制"
  negusa_nagast_legacy_desc:0 "エチオピアは帝国でありながら、ネグサ・ナガスト－エチオピアの皇帝、の権威行使については、適正な手段に欠いていた。ネグサ・ナガスト君主制は、エチオピア帝国の初期にあたることになり、従って、この改革は、宗教の不統一、中央権力の欠如、巡回首都などが特徴で、その価値以上に問題を引き起こした。"
  negusa_nagast_desc:0 "エチオピアは帝国でありながら、ネグサ・ナガスト－エチオピアの皇帝、の権威行使については、適正な手段に欠いていた。ネグサ・ナガスト君主制は、エチオピア帝国の初期にあたることになり、従って、この改革は、宗教の不統一、中央権力の欠如、巡回首都などが特徴で、その価値以上に問題を引き起こした。"
- mechanic_has_itinerant_capital_yes:0 "巡回首都である"
+ mechanic_has_itinerant_capital_yes:1 "§Y巡回首都§!である"
  solomonic_empire:0 "ソロモン帝国"
  solomonic_empire_legacy:0 "ソロモン帝国"
  solomonic_empire_legacy_desc:0 "ソロモン帝国とは、国を急速に統一した後のエチオピアの政府改革である。宗教論議はもはや懸念事項ではなく、帝国は今やその支配力を国外へと発揮している。"
@@ -604,7 +604,7 @@
  tribal_confederacy_legacy_desc:0 "複数の首長や下級の王が中央の権威の支配に屈しているが、一定度の内部自治を保っている政府形態である。"
  tribe_remain_tribal_reform:0 "先進部族の結成"
  tribe_remain_tribal_reform_desc:0 "権力統合により、自国の部族はより効率的な政府へと進歩し、民衆を満足させ、支配者の権力を維持できるようになった。"
- mechanic_has_internal_tribes_yes:0 "内部部族である。"
+ mechanic_has_internal_tribes_yes:1 "§Y内部部族§!である。"
  mechanic_has_locked_government_yes:0 "改革による政体変更をしていない。"
  mossi_federal_kingdom:0 "モシ族の連合王国"
  mossi_federal_kingdom_legacy:0 "モシ族の連合王国"
@@ -614,7 +614,7 @@
  shaka_regime_legacy:0 "ズールー部族"
  shaka_regime_desc:0 "部族君主制であり、他部族の軍事的支配と国家の軍国主義化に注力した政体。"
  shaka_regime_legacy_desc:0 "部族君主制であり、他部族の軍事的支配と国家の軍国主義化に注力した政体。"
- mechanic_has_federal_kingdoms_yes:0 "連合王国である"
+ mechanic_has_federal_kingdoms_yes:1 "§Y連合王国§!である"
  tribe_tribal_unity:0 "統一部族"
  tribe_tribal_unity_desc:0 "砂漠での部族生活は、自国の遺産であり、これからもそうあり続ける。大家族として団結している。"
  matrilineal_system:0 "母系制"
@@ -625,7 +625,7 @@
  musa_rule_legacy:0 "ムーサ支配"
  musa_rule_desc:0 "マリ帝国の政府。他の君主制と非常によく似ているが、ムーサ支配では母系相続を認めている点が特殊である。加えて、愚かな後継者の治世の時代に国事を一手に引き受ける宮廷の役人を支援する。"
  musa_rule_legacy_desc:0 "マリ帝国の政府。他の君主制と非常によく似ているが、ムーサ支配では母系相続を認めている点が特殊である。加えて、愚かな後継者の治世の時代に国事を一手に引き受ける宮廷の役人を支援する。"
- mechanic_has_tributaries_yes:0 "朝貢国を有している"
+ mechanic_has_tributaries_yes:1 "§Y朝貢国§!を有している"
  feudal_tribe:0 "封建部族制"
  feudal_tribe_legacy:0 "封建部族制"
  feudal_tribe_desc:0 "古典的な封建君主制によく似た部族制度のこと。君主やその貴族に所有される代わりに、臣民は国家の支配者に朝貢している。"
@@ -688,7 +688,7 @@
  estate_nobles_grant_power_to_the_bashorun_desc:0 "バショルンは[Root.GetNobilityOrFallbackName]の首相で、[Root.Monarch.GetTitle]の権力を抑制している。バショルンに統治と組織の権限を追加で付与することで、不適格な支配者の治世中でも[Root.GetName]の安定を保証できる。"
  ETH_CONTROL_OVER_GATE_OF_TEARS:0 "バブ・エル・マンデブ海峡の支配"
  MALI_IVORY:0 "マリの象牙"
- unlock_privilege_estate_burghers_control_over_the_mint_tt:0 "[Root.GetBurghersName]特権の「§Y金採掘の支配§!」を有効にする"
+ unlock_privilege_estate_burghers_control_over_the_mint_tt:0 "[Root.GetBurghersName]特権「§Y金採掘の支配§!」を有効化"
  unlock_privilege_estate_nobles_cawa_peace_keepers_tt:1 "[Root.GetNobilityOrFallbackName]特権の「§Yチェワ平和維持軍の使用§!」を有効にする"
  unlock_privilege_estate_nobles_cawa_offensive_fighters_tt:0 "[Root.GetNobilityOrFallbackName]特権の「§Yチェワ征服軍の使用§!」を有効にする"
  mal_add_disaster_stability_tt:1 "国難§Y マリの衰退§!が有効の場合、安定度§G1§!（安定度が既に3の場合は統治点§G50§!）を獲得します。"
@@ -719,14 +719,14 @@
  empty_text:0 ""
  primary_cults_for_heirs_tt:0 "\n§Y自国の後継者は、必ず主要カルトを自身のカルトとして選択します。§!"
  has_a_primary_cult_selected_tt:0 "§Y主要カルト§!を選択している。"
- unlock_privilege_estate_church_one_faith_one_culture_tt:0 "[Root.GetClergyName]特権「§Y宗教文化§!」を有効にする。"
+ unlock_privilege_estate_church_one_faith_one_culture_tt:0 "[Root.GetClergyName]特権「§Y宗教文化§!」を有効化"
  increase_same_religion_opinion_tt:0 "評価補正§Y同宗教§!を持つすべての国の[Root.GetName]への評価をさらに§G+25§!"
  remove_increase_same_religion_opinion_tt:0 "外交評価補正「§Y同宗教§!」の追加ボーナスを削除する。"
  INCOME_FROM_WORKSHOPS_DESC:0 "工房と会計所から。"
  unlock_privilege_estate_dhimmi_guarantee_of_traditions_tt:0 "[Root.GetDhimmiName]特権の「§Y保証された宗教的少数派の権利§!」及び「§Y保証されたズィンミーの自治§!」が、特権「§Y保証された因習§!」に置き換わります。"
  add_increase_opinion_of_fetishists_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]への外交評価が§G+40§!増加する。"
  add_increase_opinion_of_fetishists_when_same_religion_tt:0 "§Y呪物崇拝§!の全国家は、[Root.GetName]も呪物崇拝である限り、[Root.GetName]への外交評価が§G+40§!増加する。"
- add_temporary_colonist_tt:1 "この植民者は、他の植民者アイデアを解禁しない限り、利用可能です。"
+ add_temporary_colonist_tt:2 "The colonist is available as long as we do NOT get a colonist from an idea."
  disable_annexation_penalty_tt:0 "§Y属国併合§!による外交評判のペナルティを§Y無効§!にします。"
  enable_propogate_religion_effect_tt:1 "交易政策「§Y宗教の伝播§!」の使用を有効にします。"
  disable_propogate_religion_effect_tt:1 "交易政策「§Y宗教の伝播§!」の使用を無効にします。"
@@ -808,7 +808,7 @@
  judaism_rosh_hashanah_aspect:0 "ローシュ・ハッシャーナー祭"
  desc_judaism_rosh_hashanah_aspect:0 "£adm£§Yアスペクト§!\n§Y祝祭§!により、安定度§G+1§!が付与される。\n\n自民族は、長い間ファラオの圧制の中で生きてきたが、決して自我や神への信仰を失うことなく、エジプトを離れるといち早く国家としての再確立を果たした。"
  judaism_simchat_torah_aspect:0 "トーラーの歓喜祭"
- desc_judaism_simchat_torah_aspect:1 "£adm£§Yアスペクト§!\n§Y祝祭§!により、改革進捗度§G+20§!、正統性（もしくは他政体で正統性に相当するもの）§G+5§!、後継者の請求の強さ§G+5§!が付与される。\n\nトーラーはユダヤ教の聖典であり、ヘブライ語聖書の最初の5冊を含む。また、自国の最も神聖な法と伝統の源泉であり、自国にとって非常に価値のある知識も含んでいる。"
+ desc_judaism_simchat_torah_aspect:2 "£adm£§Yアスペクト§!\n§Y祝祭§!により、改革進捗度§G+25§!、正統性（もしくは他政体で正統性に相当するもの）§G+5§!、後継者の請求の強さ§G+5§!が付与される。\n\nトーラーはユダヤ教の聖典であり、ヘブライ語聖書の最初の5冊を含む。また、自国の最も神聖な法と伝統の源泉であり、自国にとって非常に価値のある知識も含んでいる。"
  judaism_sukkot_aspect:0 "仮庵祭"
  desc_judaism_sukkot_aspect:2 "£adm£§Yアスペクト§!\n§Y祝祭§!により、収入§G0.3§!年分のダカットを獲得し、インフレ削減§G-1§!が付与される。\n\n仮庵祭は、収穫の象徴であると同時に、神の意思に縛られることの象徴として、ユダヤ人にとって非常に重要な祝祭である。この期間、労働は禁止されるか、大きく制限される。"
  judaism_communities_aspect:0 "ユダヤ人共同体"
@@ -818,11 +818,11 @@
  judaism_diplomatic_rabbi_aspect:0 "ユダヤ人の故郷"
  desc_judaism_diplomatic_rabbi_aspect:0 "£dip£§Yアスペクト§!\n神権制ではない§Yキリスト教§!もしくは§Yイスラム教§!の全国家は、自国への外交評価§G+35§!を獲得する。\n\n我々は我が民族の道標であり、そのようなものとして、外国から多くのユダヤ人を自国に引き寄せている。副次的効果として、キリスト教徒やムスリムは、彼ら「望まれざる者」が我が故郷にいることを喜んでいる。"
  judaism_yom_kippur_aspect:0 "ヨム・キプル"
- desc_judaism_yom_kippur_aspect:2 "£mil£§Yアスペクト§!\n戦争中、自国は人的資源回復速度§G+10.0%§!、信仰力§G+5.0%§! を獲得する。もし自国が§Y防衛§!戦争ならば、この効果は2倍となる。\n\n我々が送る日の中で最も神聖な日、ヨム・キプルは、破戒に対する贖罪と罪に対する悔恨の日である。ヨム・キプル中、全ユダヤ人が断食し、告白し、祈るはずで、しばしばシナゴーグで奉仕しながら実践される。"
+ desc_judaism_yom_kippur_aspect:3 "£mil£§Yアスペクト§!\n戦争中、自国は人的資源回復速度§G+20.0%§!、信仰力§G+5.0%§! を獲得する。もし自国が§Y防衛§!戦争ならば、この効果は2倍となる。\n\n我々が送る日の中で最も神聖な日、ヨム・キプルは、破戒に対する贖罪と罪に対する悔恨の日である。ヨム・キプル中、全ユダヤ人が断食し、告白し、祈るはずで、しばしばシナゴーグで奉仕しながら実践される。"
  judaism_remember_passover_aspect:0 "過越の記憶"
  desc_judaism_remember_passover_aspect:2 "£mil£§Yアスペクト§!\n自軍の陥落した要塞の包囲について、包囲進行度§G+2§!の有利な状態で開始される。攻城戦の進行が有利になる。敵の要塞に対し包囲戦に勝利すると、信仰力§G+5§!を獲得する。\n\n過越はユダヤ教における主要な祝日であり、自民族がエジプト人の下にあった時代－そして彼らからの解放を思い起こすものだ。全員、過去の人々が見せてきた忍耐と、すべての勝利が祝賀に値することを思い出すのだ。"
  judaism_purim_teachings_aspect:0 "プーリームの教え"
- desc_judaism_purim_teachings_aspect:1 "£mil£§Yアスペクト§!\n戦闘に勝利する度、戦争疲弊が§G-0.05§!減少する。戦争に勝利する度、信仰力§G+10§!を獲得する。\n\nプーリームはユダヤ教の祝日であり、アケメネス朝ペルシア帝国のハマンから自民族を救ったことを記念するものである。そのため、困難な時代における自民族の忍耐力を思い出し、称え、彼らを守る模範に生きていく。"
+ desc_judaism_purim_teachings_aspect:2 "£mil£ §YAspect§!\nEvery won battle reduces War Exhaustion by §G-0.05§!. Every won war grants us §G+75§! Faith Power. Separate peace treaties in a war do not trigger this effect.\n\nPurim is a Jewish holiday, and serves as a memorial for the saving of our people from Haman of the Achaemenid Persian Empire. As such we remember and honor the endurance of our people during difficult times, and live by their example."
  diplomatic_rabbi_opinion:0 "アブラハムの交流"
  increased_fetishist_opinion:0 "呪物崇拝の交流"
  increased_same_religion:0 "信仰の同胞"
@@ -910,7 +910,7 @@
  neutral:0 "中立"
  concilatory:1 "調停的"
  concessions:0 "譲歩"
- zim_african_great_power:0 "アフリカの列強"
+ zim_african_great_power:1 "Great Power of Africa §Y(Permanent)§!"
  eth_cawa_discipline_title:0 "チェワの教練"
  eth_cawa_discipline_desc:1 "チェワとは、我が王国の封建的な貴族階級のことだ。元々は、かつてネグサ・ナガスト自身が任命した職業軍人なのだが、その兵が自軍の支柱として仕え、末端の地方の平和を守っている。\nまだまだ常に改善の余地はある。もっと多くの勇猛なる戦死を募り、完璧に鍛えるべきだろう。"
  eth_reform_the_negusa_government_title:0 "国家の集権化"
@@ -945,8 +945,8 @@
  eth_church_reforms_title:0 "安息日問題の解決"
  eth_church_reforms_desc:0 "些細な問題のように思われるが、自国の教会は聖書上の安息日遵守の問題で分裂しているーそれも、ほぼ丸一世紀もの間だ。アレクサンドリア教会の信者は安息日を日曜日とするのを守るべきだと考えているが、エウスタティウスの信者は週末の両日を守るべきだと考えている。宗教的統一を維持したければ、双方の団体の妥協点を見つける必要がある。"
  eth_church_reforms_ct:1 "イベント「§Yザラ・ヤコブの集権改革§!」が発生済み。"
- unlock_privilege_estate_church_yakobs_churches_tt:0 "[Root.GetClergyName]特権の「§Y聖書上の安息日改革§!」を有効にする"
- unlock_privilege_estate_burghers_hydraulic_rights_tt:0 "[Root.GetBurghersName]特権の「§Y水理権の付与§!」を有効にする"
+ unlock_privilege_estate_church_yakobs_churches_tt:0 "[Root.GetClergyName]特権「§Y聖書上の安息日改革§!」を有効化"
+ unlock_privilege_estate_burghers_hydraulic_rights_tt:0 "[Root.GetBurghersName]特権「§Y水理権の付与§!」を有効化"
  eth_build_an_army_title:0 "[Root.GetName]軍"
  eth_build_an_army_desc:0 "我が王国は、異教徒や[Root.GovernmentName]の敵に取り囲まれている。生き残り、国家の拡大を望むなら、さらに多くの部隊と有能な将軍で自軍を増強する必要がある。"
  eth_conquer_southern_kingdoms_title:0 "南部の征服"
@@ -2420,7 +2420,7 @@
  estate_brahmins_religious_diplomats:0 "宗教外交官"
  estate_brahmins_religious_diplomats_desc:0 "良い外交の実現は難しい。ちょっとした誤解で、二国間の関係は急落する。\n非常に宗教色の強い外交官を信仰の同胞に派遣することで、少なくともこういった事態を防ぐことができる"
  desc_eth_accepted_society:0 "この州のユダヤ人は、まるでコプト教徒のように扱われている。"
- c_a_convert_mission_tt:0 "§Y10§!の州を改宗させる（§Y[Root.CountConversionsDone]§!/§Y10§!）"
+ c_a_convert_mission_tt:1 "§Y10§!の州を改宗させる（§Y[Root.GetNumConvertedProvinces]§!/§Y10§!）"
  custom_global_monthly_devastation:0 "地方のギルド再興"
  custom_global_monthly_devastation_desc:0 "戦争や災害は、どの地方にとっても悩みの種だ。我が大国は、荒廃した都市や村を再建する石工や建築家の地方ギルドを利用することで、地方の荒廃の期間を低く抑えている。"
  custom_global_prosperity_growth:0 "繁栄への努力"
@@ -2451,3 +2451,6 @@
  custom_amount_of_cawa_desc:0 "チェワは我が軍の主力部隊である。しかし、その訓練ゆえに、彼らは極少数である。精鋭兵訓練所の設立により、これまで以上に多くのチェワ連隊が編成できるようになる。"
  custom_global_rebel_suppression_efficiency:0 "憲兵"
  custom_global_rebel_suppression_efficiency_desc:0 "反乱軍は常に我が国への脅威であり、地方の法執行機関では対処しきれない。この場合、州の平和を確保するために、軍を使わざるを得ない。"
+ decline_of_mali_desc:0 "Pain. Suffering. And the Mali way of life."
+ w_african_tolerance_fetishist:0 "Unity in Religion"
+ desc_w_african_tolerance_fetishist:0 "We have asserted the true faith in West Africa! The traditions and authority of our shamans shall be unquestioned!"
