--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -269,7 +269,7 @@
  PROV_ADJ270:0 "トラカイ"
  PROV_ADJ271:0 "ジェマイティヤ"
  PROV_ADJ272:0 "ヴィルナ"
- PROV_ADJ273:0 "ヴェンド"
+ PROV_ADJ273:1 "ラトガレ"
  PROV_ADJ274:0 "プスコフ"
  PROV_ADJ275:0 "ポロツク"
  PROV_ADJ276:0 "ミンスク"
