--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -166,8 +166,6 @@
  GOV_ATTACK:0 "異なる政体への攻撃"
  HAS_NOT_IDEA_ALLOWING:1 "「$WHICH$」が可能なアイデアを取得していない。\n"
  HAS_IDEA_ALLOWING:1 "「$WHICH$」が可能なアイデアを取得している。\n"
- OPPOSE_NEXT_REFORM:1 "利用可能なすべての改革に反対する。"
- WANTS_NEXT_REFORM:1 "利用可能な改革の少なくとも1つを要望している。"
  HAVE_LESS_THAN_ADM_POWER:0 "統治力が右記未満："
  HAVE_MORE_THAN_ADM_POWER:0 "統治力が右記以上："
  HAVE_LESS_THAN_DIP_POWER:0 "外交力が右記未満："
@@ -194,12 +192,12 @@
  IS_MARCH_OF:0 "右記の辺境伯である："
  HAVE_LESS_MARCHES_THAN:0 "次の値未満の辺境伯を持っている："
  HAVE_MORE_MARCHES_THAN:0 "次の値以上の辺境伯を持っている："
- CAN_NOT_CREATE_MARCH:0 "辺境伯を作成できません"
- CAN_CREATE_MARCH:0 "辺境伯を作成できます"
- CAN_CREATE_SUBJECT:0 "$TYPE$を作成できます"
- CAN_NOT_CREATE_SUBJECT:0 "$TYPE$を作成できません"
- CAN_HAVE_SUBJECTS:1 "$SUBJECTS$を持つことができる"
- CAN_NOT_HAVE_SUBJECTS:1 "$SUBJECTS$を持つことができない"
+ CAN_NOT_CREATE_MARCH:0 "辺境伯を作成不可能"
+ CAN_CREATE_MARCH:0 "辺境伯を作成可能"
+ CAN_CREATE_SUBJECT:0 "$TYPE$を作成可能"
+ CAN_NOT_CREATE_SUBJECT:0 "$TYPE$を作成不可能"
+ CAN_HAVE_SUBJECTS:1 "$SUBJECTS$を保有可能"
+ CAN_NOT_HAVE_SUBJECTS:1 "$SUBJECTS$を保有不可能"
  IS_NOT_A_POSSIBLE_MARCH:0 "は可能な辺境伯ではない"
  IS_A_POSSIBLE_MARCH:0 "は可能な辺境伯である"
  HAS_NOT_TERRAIN:0 "$TERRAIN|Y$の地形を持っていない"
@@ -233,10 +231,10 @@
  ADVISOR_TYPE_EMPLOYED_3:0 "$ARG0$ $ARG1$ $ARG2$ $TYPE$の顧問が雇用されている。\n"
  ADD_SPY_NETWORK_IN:0 "$TARGET$での諜報網規模が$VAL|+$増加します。\n"
  ADD_SPY_NETWORK_FROM:0 "$TARGET$が諜報網規模を$VAL|-$増加させます。\n"
- HAVE_SPY_NETWORK_IN:0 "$TARGET$での諜報網規模が$VAL$以上である。\n"
- NOT_HAVE_SPY_NETWORK_IN:0 "$TARGET$での諜報網規模が$VAL$未満である。\n"
- HAVE_SPY_NETWORK_FROM:0 "$TARGET$からの諜報網規模が$VAL$以上である。\n"
- NOT_HAVE_SPY_NETWORK_FROM:0 "$TARGET$からの諜報網規模が$VAL$以上ではない。\n"
+ HAVE_SPY_NETWORK_IN:1 "§Y$TARGET$§!での諜報網規模が§Y$VAL$§!以上である。\n"
+ NOT_HAVE_SPY_NETWORK_IN:1 "§Y$TARGET$§!での諜報網規模が§Y$VAL$§!未満である。\n"
+ HAVE_SPY_NETWORK_FROM:1 "§Y$TARGET$§!からの諜報網規模が§Y$VAL$§!以上である。\n"
+ NOT_HAVE_SPY_NETWORK_FROM:1 "§Y$TARGET$§!からの諜報網規模が§Y$VAL$§!以上ではない。\n"
  HAVENT_CLAIM:0 "請求権を持っていない"
  HAVE_CLAIM_IN:0 "請求権を持っている"
  HAVE_PERMANENT_CLAIM_IN:0 "恒久的な請求権を持っている"
@@ -624,7 +622,7 @@
  HAVE_LESS_THAN_MIL_POWER_COST_TRIGGER:0 "軍事力が$AMOUNT|Y$未満\n"
  HAVE_MORE_THAN_ADM_POWER_COST_TRIGGER:0 "統治力が$AMOUNT|Y$以上\n"
  HAVE_MORE_THAN_DIP_POWER_COST_TRIGGER:0 "外交力が$AMOUNT|Y$以上\n"
- HAVE_MORE_THAN_MIL_POWER_COST_TRIGGER:0 "軍事力が$AMOUNT|Y$以上\n"
+ HAVE_MORE_THAN_MIL_POWER_COST_TRIGGER:0 "$AMOUNT|Y$の軍事力を持っている。\n"
  HAVE_LESS_BANNERS_THAN:1 "§Y$VALUE$§!未満の八旗を持っている。\n"
  HAVE_AT_LEAST_BANNERS_THAN:1 "§Y$VALUE$§!以上の八旗を持っている。\n"
  HAVE_LESS_STRELTSY_THAN:1 "§Y$VALUE$§!未満のストレリツィを持っている。\n"
@@ -673,3 +671,7 @@
  TECH_REQUIRES_INSTITUTION:1 "$INSTITUTION|Y$を受容していない国家では、$TECH|Y$に$PENALTY$の追加コストがかかります。\n"
  TECH_COST:0 "コスト：$VAL$\n"
  ADD_CAWA_SUB_UNIT_EFFECT:0 "'§Gチェワ§!'$UNIT$を$WHERE|Y$で得る。"
+ OPPOSE_REFORM:1 "$REFORM|Y$に反対する。"
+ WANTS_REFORM:1 "$REFORM|Y$を支持する。"
+ HAVE_LESS_ADMIN_EFICIENCY:1 "統治効率が$VALUE|Y$未満"
+ HAVE_MORE_ADMIN_EFICIENCY:1 "統治効率が$VALUE|Y$以上"
