--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -163,7 +163,7 @@
  desc_mongol_european_conquest:0 "ルーシを打ち破ったことで、ヨーロッパへの門戸が開かれた。彼らは再びモンゴルの遊牧民族の恐怖を知るだろう！"
  mongol_kurultai:0 "年次クリルタイ"
  desc_mongol_kurultai:0 "大クリルタイが毎年ここで開催され、この場で、全ての部族はハンへ忠誠を誓わなければならない。"
- mongol_kurultai_tooltip:0 "§Yカラコルム§!で§Y年次クリルタイ§!補正が有効となる"
+ mongol_kurultai_tooltip:0 "§Yカラコルム§!でトリガー補正§Y年次クリルタイ§!を有効化"
  reorganized_mongols:0 "モンゴル部族の再編"
  desc_reorganized_mongols:0 "モンゴル部族を明確な領土境界を持った個々の集団に編成した。違いはあるにせよ、内紛を終結させた。"
  genghis_khan_reborn:0 "チンギス・ハンの生まれ変わり"
@@ -352,7 +352,7 @@
  string_ruler_title:0 "[This.Monarch.GetTitle]"
  string_adj_and_regency_council:0 "[This.GetAdjective]摂政評議会"
  string_regency_council_2:0 "摂政評議会"
- string_ruler_title_and_name:0 "[This.Monarch.GetName][This.Monarch.GetTitle]"
+ string_ruler_title_and_name:0 "[This.Monarch.GetTitle][This.Monarch.GetName]"
  string_regency_council_no_cap:0 "摂政評議会"
  has_manufactory_trigger_tooltip:0 "§Y工場§!を保有している"
  pretty_colonial_borders.3.name:0 "植民地間紛争"
@@ -511,7 +511,7 @@
  leadered_peasant_rebels_army:0 "農民軍"
  DEVELOPMENT_IN_PROVINCES:0 "領有する州の開発度$DEVELOPMENT$（現在値：$CURRENT|Y$）"
  string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きました－朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風である－「小中国」となりました。一方で中国側は李氏朝鮮を「東方の礼儀正しい民の国」と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えています－目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ！"
- string_start_jurchens:1 "漢民族は、§Y女真族§!が団結した際の危険性をよく知っています。12世紀、女真族の将軍§Y阿骨打§!は、女真族を統一させ、§Y遼§!に蜂起し、§Y金§!国を設立し、自らを§Y太祖皇帝§!と名乗りました。§Y明§!王朝は再び女真族が蜂起しないよう願っており、どの一族も力を持ちすぎないよう彼らがその一族間で戦い続けるように措置を講じています。この目的のために、明は§Y建州§!と§Y海西§!の女真族に対して緩い宗主の立場を確立しました。\n\n女真族の中で、建州女真は群を抜いて強力です。海西と同様、彼らは定住民族です。中国支配の制度や思想が徐々にこの地方へ浸透し、現地の漢民族に受容されつつあります。\n\n中国の支配や慣習に侵食されているにもかかわらず、定住した女真族は、北方の「野生の女真族」の伝統と戦士文化のほぼ同じものを持ち続けています。§Y野人§!、§Y兀狄哈§!、§Y東海§!の遊牧民族は決して非力ではなく、互いに戦いあわねばならず、§Yソロン§!族と§Yニブフ§!族は相対的に孤立しています。\n\n§Y朝鮮§!は度々女真族と対立しており、最近になって、建州女真の氏族から東北地方の§Y六鎮§!と§Y京城§!を併合しました。女真族も朝鮮人も§Y白頭山§!を聖地と捉えており、互いに自分たちだけが神聖なる山頂を訪れることができると信じています。\n\n女真族と§Yモンゴル族§!の関係性は絶えず変化しています。時には盟友、時には恨み重なる相手であり、双方の民族の部族が政治的な関係確保のためにしばしば結婚し、王家同士の確執も見られます。§Yウネボラト・ハン§!配下の§Yホルチン§!のモンゴル族は東部で支配的な存在になり、もし封じ込めされなければ、女真族の領地への拡大に目を向けるかもしれません。\n\n女真族は金の時代を懐かしく思い出します。もし彼らが部族間の分裂を克服し、モンゴル族を寄せ付けないことができれば、彼らは新しい指導者の下で再び立ち上がり、明を打ち負かし、自ら新しい独自性を作り上げることができるでしょう。"
+ string_start_jurchens:2 "The Han know well the dangers of allowing the §YJurchens§! to unite. In the 12th century the Jurchen warlord §YAguda§! united the Jurchens in rebellion against the §YLiao§!, founding the state of §YJin§! and crowning himself §YEmperor Taizu§!. The §YMing§! dynasty wishes to avoid another Jurchen uprising, and takes measures to ensure that they continue to fight among themselves with no faction becoming too powerful. To that end, Ming has established a loose overlordship over the §YJianzhou§! and §YHaixi§! Jurchens.\n\nOf the Jurchen tribes the Jianzhou are by far the most powerful. Like the Haixi they are a settled people; the institutions and philosophies of Chinese rule are slowly spreading into the region and being embraced by local Khans.\n\nDespite the encroachment of Chinese rule and customs, the settled Jurchens retain most of the same traditions and the warrior-culture of the ‘Wild Jurchens’ to the north. The nomadic tribes of §YXibe§!, §YNanai§!, and §YOrochoni§! are far from powerless, and have to contend only with each other and the relatively isolated §YSolon§! and §YNikvh§! peoples.\n\n§YKorea§! often finds itself at odds with the Jurchens, and has only recently annexed the north-eastern provinces of §YYukjin§! and §YGyeongseong§! from a branch of the Jianzhou. Both the Jurchens and Koreans consider §YPaektu Mountain§! to be a sacred place, and each believe that they alone should have access to the holy peak.\n\nThe Jurchens and the §YMongols§! have an ever-changing relationship. Sometimes allies and sometimes bitter rivals, the tribes of both people often intermarry to secure political ties, and dynastic feuding is common. The §YKorchin§! Mongols under §YKhan Unebolad§! have become ascendent in the east and may set their sights on expanding into Jurchen land if they are not contained.\n\nThe Jurchen Khans remember the days of Jin fondly. If they are able to overcome the divisions between the tribes and keep the Mongols at bay they may yet rise again under a new leader, defeat the Ming, and forge for themselves a new identity."
  chahar_area:0 "チャハル"
  cicigar_area:0 "チチガル"
  flavor_oir.8.t:0 "ジュンガル"
@@ -755,7 +755,7 @@
  xilin_gol_area_adj:0 "シリンゴル"
  sinicize_culture_title:0 "我々の文化の中国化"
  sinicize_culture_desc:0 "我々の文化は我らの最高の誇りである。我々の言葉は他に類を見ないものであり、我々の伝統と遺産は社会の柱である。\nそれでも、中国の言語と文化が数十年にわたって我々に与えてきた影響を否定することはできないし、その影響は未だかつてないほど大きいものとなっている。誰もがこの決定に賛同しているわけではないが、我が国の[Root.Culture.GetName]人と中国人との間により素晴らしい調和を生み出すために、我々の文化を中国化することは考慮する価値のあることかもしれない。"
- sinicize_culture_tt:0 "新世界またはオセアニアにない§Y[Root.Culture.GetName]§!文化の州をすべて[Root.GetName]またはその従属国（非朝貢国）が領有している。"
+ sinicize_culture_tt:1 "新世界またはオセアニアにない§Y[Root.Culture.GetGroupName]§!文化の州をすべて[Root.GetName]またはその従属国（非朝貢国）が領有している。"
  chinese_culture_group_dominates_in_country:0 "中華文化グループの1つが[Root.GetName]の§Y支配的な文化§!である。"
  sinicize_culture_ct:0 "§Y[Root.Culture.GetName]§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
  sinicize_mongols_ct:0 "§Yモンゴル§!、§Yホルチン§!、§Yハルハ§!、§Yオイラト§!文化の州がすべて§Y中華§!文化グループに取り入れられます。"
@@ -780,3 +780,5 @@
  flavor_mch.EVTNAME8:0 "満州の勃興"
  flavor_mch.EVTDESC8:0 "満州地域の女真族は、いつも[Root.GetName]に忠実な朝貢国であった。身の程を弁え、我々に仕えていたのだ。\nしかし、最近ではその態度が大きく変わりつつある。我々が年貢を貰って満足している間に、征服欲溢れる女真族は他部族を征服し、地域と部族を一つにまとめ上げたのだ。"
  flavor_mch.EVTOPTA8:0 "天の慈悲があらんことを。"
+ mch_missions.5.b:0 "A life on this island would be nice though..."
+ kor_defeat_shogun_tt:1 "If we complete this mission while harmonizing the §YShinto§! faith then we gain §G+15§! Religious Harmonization Progress.\n\nIf we already have harmonized with §YShinto§! then we gain §G+100§! Military Power instead."
