--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -2143,8 +2143,8 @@
  COLSUCCESS_BTN1:0 "OK"
  COLSUCCESS_BTN2:0 "OK"
  COLSUCCESS_BTN3:0 "移動"
- TRIGMOD_TITLE:0 "補正因子"
- TRIGMOD_SETUP:0 "我が国が補正トリガー（農民戦争など）の影響を受けるとき"
+ TRIGMOD_TITLE:0 "トリガー補正"
+ TRIGMOD_SETUP:0 "我が国がトリガー補正（農民戦争など）の影響を受けるとき"
  TRIGMOD_HEADER:0 "$MESSENGER$"
  TRIGMOD_1:0 "$NAME$"
  TRIGMOD_2:0 "$MONARCHTITLE$、$NAME$が我々に起こりました。"
@@ -2154,8 +2154,8 @@
  TRIGMOD_BTN1:0 "OK"
  TRIGMOD_BTN2:0 "OK"
  TRIGMOD_BTN3:0 "詳細"
- TRIGMODLOST_TITLE:0 "補正因子の喪失"
- TRIGMODLOST_SETUP:0 "補正トリガー（農民戦争など）の影響が喪失したとき"
+ TRIGMODLOST_TITLE:0 "トリガー補正の喪失"
+ TRIGMODLOST_SETUP:0 "トリガー補正（農民戦争など）の影響が喪失したとき"
  TRIGMODLOST_HEADER:0 "$MESSENGER$"
  TRIGMODLOST_1:0 "$NAME$"
  TRIGMODLOST_2:0 "$NAME$の効果が喪失しました。"
@@ -7072,3 +7072,46 @@
  STOPCURRYFAVORS_BTN1:0 "OK"
  STOPCURRYFAVORS_BTN2:0 "OK"
  STOPCURRYFAVORS_BTN3:0 "移動"
+ OTHERJOINSOURHRE_TITLE:0 "Joins Empire"
+ OTHERJOINSOURHRE_SETUP:0 "When another country joins our Empire."
+ OTHERJOINSOURHRE_HEADER:0 "Herald from"
+ OTHERJOINSOURHRE_1:0 "$ACTOR$"
+ OTHERJOINSOURHRE_2:0 "$MONARCHTITLE$,"
+ OTHERJOINSOURHRE_3:0 "$ACTOR$ has joined our Empire"
+ OTHERJOINSOURHRE_4:0 "With their help,"
+ OTHERJOINSOURHRE_5:0 "we will spread our faith."
+ OTHERJOINSOURHRE_LOG:0 "$ACTOR$ joined our Empire."
+ OTHERJOINSOURHRE_BTN1:0 "Perfect!"
+ OTHERJOINSOURHRE_BTN2:0 "Perfect!"
+ OTHERJOINSOURHRE_BTN3:0 "Go to"
+ WEJOINEDHRE_TITLE:0 "Joined Empire"
+ WEJOINEDHRE_SETUP:0 "When you join the Empire."
+ WEJOINEDHRE_HEADER:0 "$MESSENGER$"
+ WEJOINEDHRE_1:0 "We joined the Empire"
+ WEJOINEDHRE_2:0 "$MONARCHTITLE$, we have joined the Empire"
+ WEJOINEDHRE_3:0 "led by $LEADER$."
+ WEJOINEDHRE_4:0 "Together, we will achieve glory for our faith."
+ WEJOINEDHRE_LOG:0 "We have entered the Empire"
+ WEJOINEDHRE_BTN1:0 "Perfect!"
+ WEJOINEDHRE_BTN2:0 "Perfect!"
+ WEJOINEDHRE_BTN3:0 "Go to"
+ OTHERJOINSHRE_TITLE:0 "Joins Empire"
+ OTHERJOINSHRE_SETUP:0 "When another country joins the Empire."
+ OTHERJOINSHRE_HEADER:0 "Herald from"
+ OTHERJOINSHRE_1:0 "$ACTOR$"
+ OTHERJOINSHRE_2:0 "$MONARCHTITLE$, $ACTOR$ has joined the Empire"
+ OTHERJOINSHRE_3:0 "led by $LEADER$"
+ OTHERJOINSHRE_LOG:0 "$ACTOR$ entered the Empire"
+ OTHERJOINSHRE_BTN1:0 "Damnation!"
+ OTHERJOINSHRE_BTN2:0 "Damnation!"
+ OTHERJOINSHRE_BTN3:0 "Go to"
+ OTHERJOINSOURHREDECLINE_TITLE:0 "Declined Empire"
+ OTHERJOINSOURHREDECLINE_SETUP:0 "When another country decline our invitation to the Empire."
+ OTHERJOINSOURHREDECLINE_HEADER:0 "Herald from"
+ OTHERJOINSOURHREDECLINE_1:0 "$ACTOR$"
+ OTHERJOINSOURHREDECLINE_2:0 "$MONARCHTITLE$, $ACTOR$ has declined"
+ OTHERJOINSOURHREDECLINE_3:0 "our invitation to the Empire."
+ OTHERJOINSOURHREDECLINE_LOG:0 "$ACTOR$ declined our invitation to the Empire."
+ OTHERJOINSOURHREDECLINE_BTN1:0 "How awful!"
+ OTHERJOINSOURHREDECLINE_BTN2:0 "How awful!"
+ OTHERJOINSOURHREDECLINE_BTN3:0 "Go to"
