--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -673,10 +673,10 @@
  dlc101_reason_burgundy:0 "§YEmperor Expansion§!は、改良版ブルゴーニュ継承などの帝国事件やブルゴーニュ独自のミッションツリーを追加します。"
  dlc101_reason_burgundy_reason:0 "\n§Yブルゴーニュ§!を選択しているため、このユニットパックを推奨します。"
  dlc105_reason_europe:0 "§YEmperor Music Pack§!は、近世ヨーロッパからインスピレーションを得た新しい楽曲を5曲追加します。"
- dlc105_reason_europe_reason:0 "§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
+ dlc105_reason_europe_reason:1 "\n§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
  DLC_dlc106_TOOLTIP_INSTANT:0 "Leviathan"
  DLC_dlc106_TOOLTIP_DELAYED:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n- 好感度を稼ぐ\n- 開発度の集中\n- 中央集権国家\n- 拡張された摂政政治\n- トーテム信仰\n\n追加機能：\n- マンダラ政府改革\n- 首都の略奪\n- 輸送船の徴集"
- LANDING_dlc106_TEXT:0 "- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n- 好感度を稼ぐ\n- 開発度の集中\n- 中央集権国家\n- 拡張された摂政政治\n- トーテム信仰\n\n追加機能：\n- マンダラ政府改革\n- 首都の略奪\n- 輸送船の徴集"
+ LANDING_dlc106_TEXT:1 "主な機能：\n- 東南アジアのミッションツリー\n- 記念碑\n- 拡張された植民地国家\n- 好感度を稼ぐ\n- 開発度の集中\n- 中央集権国家\n- 拡張された摂政政治\n- トーテム信仰\n\n追加機能：\n- マンダラ政府改革\n- 首都の略奪\n- 輸送船の徴集"
  LANDING_dlc106_FLAVOR_TEXT:0 "宝石の如く輝く首都を想像してみてください。それは、内陸地から得られた富で改善されましたー従属国から要求した富で彩られたものでもあります。広大な領土を有する帝国の首都ではなく、小さく集中した国家の首都です。Europa Universalis IV：Leviathanでは、それを想像、実現することができます。\n\nLeviathanでは、いくつかの力の中心を持つ、より集中した領域で「高い」プレイを可能にする新しいツールが用意されています。また、摂政制や植民地といった確立したゲーム機能にも多くの変更が加えられています。"
  DLC_dlc110_TOOLTIP_INSTANT:0 "Origins"
  DLC_dlc110_TOOLTIP_DELAYED:0 "- アフリカ独自の地域ミッションツリー\n- アフリカの政府改革\n- アフリカの階級特権\n- ユダヤ教の機能\n- アフリカユニットと宣教師の新しいモデル\n- アフリカでの新しい音楽\n\n追加要素：\n- ユダヤ教の新規イベント\n- エチオピアの独自カワユニット"
@@ -691,6 +691,17 @@
  dlc106_reason_oceania:0 "§YLeviathan Expansion§!は、オセアニア諸国に新しいユニットモデルを追加します。"
  dlc106_reason_oceania_reason:0 "\n§Yオセアニア§!大陸にある国家を選択しているため、このDLCを推奨します。"
  dlc110_reason_mission_trees:0 "§YOrigins Expansion§!は固有のミッションツリーを追加します。"
- dlc110_reason_mission_trees_reason:0 "独特で面白いミッションが得られるであろう国を選んでいるため、このDLCを推奨します。"
+ dlc110_reason_mission_trees_reason:1 "\n独特で面白いミッションが得られるであろう国を選んでいるため、このDLCを推奨します。"
  dlc110_reason_new_music:0 "§YOrigins Expansion§!は新しい楽曲を追加します。"
- dlc110_reason_new_music_reason:0 "選択した地域の国々に新しい楽曲が追加されるため、このDLCを推奨します。"
+ dlc110_reason_new_music_reason:1 "\n選択した地域の国々に新しい楽曲が追加されるため、このDLCを推奨します。"
+ DLC_dlc115_TOOLTIP_INSTANT:0 "Lions of the North"
+ DLC_dlc115_TOOLTIP_DELAYED:0 "- New mission trees for Scandinavian and Baltic countries\n- New unique government reforms for Scandinavian and Baltic countries\n- New special estate privileges for Scandinavian and Baltic countries\n- New special units, Swedish-Finnish Caroleans and Polish-Lithuanian Winged Hussars\n- New models for Scandinavian and Baltic countries\n- 6 new songs for Scandinavian and Baltic countries"
+ LANDING_dlc115_TEXT:0 "Main Features:\n- New mission trees for Scandinavian and Baltic countries\n- New unique government reforms for Scandinavian and Baltic countries\n- New special estate privileges for Scandinavian and Baltic countries\n- New special units, Swedish-Finnish Caroleans and Polish-Lithuanian Winged Hussars\n- New models for Scandinavian and Baltic countries\n- 6 new songs for Scandinavian and Baltic countries"
+ LANDING_dlc115_FLAVOR_TEXT:0 "The three kingdoms of Denmark, Sweden and Norway form an unsteady union after they were all brought together under King Erik of Pomerania in 1397. However, he was deposed and exiled to the island of Gotland in 1439, leaving the Kalmar Union in growing instability. Meanwhile, across the Baltic Sea, the Kingdom of Poland and the Duchy of Lithuania must elect a new ruler after the Battle of Varna, where the King and Duke Wladyslaw III was killed. This may be the occasion for the Teutonic and Livonian Orders to recover from their defeats, and for the trading cities of Riga and Danzig to seize the opportunities that lie ahead.\n\nLions of the North challenge you to rule a Scandinavian or Baltic country in an era of struggle, leading it to achieve different objectives through alternate paths that unfold in a fully immersive experience."
+ dlc114_reason_generic:0 "The §YGuns, Drums and Steel Volume 3 Music Pack§! adds twelve new metal-inspired songs that up the tempo, crank up the bass and further enhance the Europa Universalis listening experience."
+ dlc115_reason_mission_trees:0 "The §YLions of the North Expansion§! adds unique mission trees, government reforms, estate privileges and special units."
+ dlc115_reason_mission_trees_reason:0 "\nWe're recommending this expansion as you have picked a country that would get unique and interesting missions, government reforms, estate privileges and/or special units."
+ dlc115_reason_new_units:0 "The §YLions of the North Expansion§! adds new unit models to countries in the Scandinavia, Baltic and North Germany regions."
+ dlc115_reason_new_units_reason:1 "\nWe're recommending this expansion as it adds new unit models to the countries in your selected region, either Scandinavia, the Baltic or North Germany."
+ dlc115_reason_new_music:0 "The §YLions of the North Expansion§! adds new Music."
+ dlc115_reason_new_music_reason:0 "\nWe're recommending this expansion as it adds 3 new songs to the countries in your selected region, either Scandinavia or the Baltic."
